java虚拟机第4章笔记

--- a/BookNote/深入理解 Java 虚拟机/第4章-虚拟机性能监控、故障处理工具.md
+++ b/BookNote/深入理解 Java 虚拟机/第4章-虚拟机性能监控、故障处理工具.md
@@ -179,181 +179,114 @@ jstack [ option ] vmid
 
 ## 4.3 可视化故障处理工具 
 
-JDK中除了附带大量的命令行工具外，还提供了几个功能集成度更高的可视化工具，用户可以使用这些可视化工具以更加便捷的方式进行进程故障诊断和调试工作
+　　JDK 中除了附带大量的命令行工具外，还提供了几个功能集成度更高的可视化工具，用户可以使用这些可视化工具以更加便捷的方式进行进程故障诊断和调试工作。
 
- 
+　　这类工具主要包括 JConsole、JHSDB、VisualVM 和 JMC 四个。
 
- 
+　　其中，JConsole 是最古老，早在 JDK 5 时期就已经存在的虚拟机监控工具，而 JHSDB 虽然名义上是 JDK 9 中才正式提供，但之前已经以 sa-jdi.jar 包里面的 HSDB（ 可视化工具 ）和 CLHSDB（ 命令行工具 ）的形式存在了很长一段时间￼。它们两个都是 JDK 的正式成员，随着 JDK 一同发布，无须独立下载，使用也是完全免费的。 
 
-这类工具主要包括JConsole、JHSDB、VisualVM和JMC四个
+　　VisualVM在 JDK 6 Update 7 中首次发布，直到 JRockit Mission Control 与 OracleJDK 的融合工作完成之前，它都曾是 Oracle 主力推动的多合一故障处理工具，现在它已经从 OracleJDK 中分离出来，成为一个独立发展的开源项目￼。VisualVM 已不是 JDK 中的正式成员，但仍是可以免费下载、使用的。 
 
- 
+　　Java Mission Control，曾经是大名鼎鼎的来自 BEA 公司的图形化诊断工具，随着 BEA 公司被 Oracle 收购，它便被融合进 OracleJDK 之中。在 JDK 7 Update 40 时开始随 JDK 一起发布，后来 Java SE Advanced 产品线建立，Oracle 明确区分了 Oracle OpenJDK 和 OracleJDK 的差别￼，JMC 从 JDK 11 开始又被移除出 JDK。虽然在 2018 年 Oracle 将 JMC 开源并交付给 OpenJDK 组织进行管理，但开源并不意味着免费使用，JMC 需要与 HotSpot 内部的 “ 飞行记录仪 ”（Java Flight Recorder，JFR）配合才能工作，而在 JDK 11 以前，JFR 的开启必须解锁 OracleJDK 的商业特性支持（ 使用 JCMD 的 VM.unlock_commercial_features 或启动时加入 -XX：+UnlockCommercialFeatures 参数），所以这项功能在生产环境中仍然是需要付费才能使用的商业特性。 
 
- 
+### 4.3.1 JHSDB：基于服务性代理的调试工具
 
-其中，JConsole是最古老，早在JDK 5时期就已经存在的虚拟机监控工具，而JHSDB虽然名义上是JDK 9中才正式提供，但之前已经以sa-jdi.jar包里面的HSDB（可视化工具）和CLHSDB（命令行工具）的形式存在了很长一段时间￼。它们两个都是JDK的正式成员，随着JDK一同发布，无须独立下载，使用也是完全免费的。 
+　　JDK 中提供了 JCMD 和 JHSDB 两个集成式的多功能工具箱，它们不仅整合了上一节介绍到的所有基础工具所能提供的专项功能，而且由于有着 “ 后发优势 ”，能够做得往往比之前的老工具们更好、更强大。
 
- 
+　　下表所示是 JCMD、JHSDB 与原基础工具实现相同功能的简要对比：
 
- 
+![](image/JCMD、JHSDB和基本工具的对比.jpeg)
 
-VisualVM在JDK 6 Update 7中首次发布，直到
+　　JHSDB 是一款基于服务性代理（ Serviceability Agent，SA ）实现的进程外调试工具。
 
- 
+　　服务性代理是 HotSpot 虚拟机中一组用于映射 Java 虚拟机运行信息的、主要基于 Java 语言（含少量 JNI 代码）实现的 API 集合。
 
- 
+　　服务性代理以 HotSpot 内部的数据结构为参照物进行设计，把这些 C++ 的数据抽象出 Java 模型对象，相当于 HotSpot 的 C++ 代码的一个镜像。通过服务性代理的 API，可以在一个独立的 Java 虚拟机的进程里分析其他 HotSpot 虚拟机的内部数据，或者从 HotSpot 虚拟机进程内存中 dump 出来的转储快照里还原出它的运行状态细节。服务性代理的工作原理跟 Linux 上的 GDB 或者 Windows 上的 Windbg 是相似的。
 
-JRockit Mission Control与OracleJDK的融合工作完成之前，它都曾是Oracle主力推动的多合一故障处理工具，现在它已经从OracleJDK中分离出来，成为一个独立发展的开源项目￼。VisualVM已不是JDK中的正式成员，但仍是可以免费下载、使用的。 
+　　staticObj 随着 Test 的类型信息存放在方法区，instanceObj 随着 Test 的对象实例存放在 Java 堆，localObject 则是存放在 foo() 方法栈帧的局部变量表中。
 
- 
+　　从《 Java 虚拟机规范 》所定义的概念模型来看，所有 Class 相关的信息都应该存放在方法区之中，但方法区该如何实现，《 Java 虚拟机规范 》并未做出规定，这就成了一件允许不同虚拟机自己灵活把握的事情。JDK 7 及其以后版本的 HotSpot 虚拟机选择把静态变量与类型在 Java 语言一端的映射 Class 对象存放在一起，存储于 Java 堆之中。
 
- 
+ ### 4.3.2 JConsole：Java 监视与管理控制台
 
-Java Mission Control，曾经是大名鼎鼎的来自BEA公司的图形化诊断工具，随着BEA公司被Oracle收购，它便被融合进OracleJDK之中。在JDK 7 Update 40时开始随JDK一起发布，后来Java SE Advanced产品线建立，Oracle明确区分了Oracle OpenJDK和OracleJDK的差别￼，JMC从JDK 11开始又被移除出JDK。虽然在2018年Oracle将JMC开源并交付给OpenJDK组织进行管理，但开源并不意味着免费使用，JMC需要与HotSpot内部的“飞行记录仪”（Java Flight Recorder，JFR）配合才能工作，而在JDK 11以前，JFR的开启必须解锁OracleJDK的商业特性支持（使用JCMD的
+　　JConsole（Java Monitoring and Management Console）是一款基于 JMX（Java Manage-ment Extensions）的可视化监视、管理工具。
 
- 
+　　它的主要功能是通过 JMX 的 MBean（Managed Bean）对系统进行信息收集和参数动态调整。JMX 是一种开放性的技术，不仅可以用在虚拟机本身的管理上，还可以运行于虚拟机之上的软件中，典型的如中间件大多也基于 JMX 来实现管理与监控。虚拟机对 JMX MBean 的访问也是完全开放的，可以使用代码调用 API、支持 JMX 协议的管理控制台，或者其他符合 JMX 规范的软件进行访问。 
 
- 
+### 4.3.3 VisualVM：多合一故障处理工具
 
-VM.unlock_commercial_features或启动时加入-XX：+UnlockCommercialFeatures参数），所以这项功能在生产环境中仍然是需要付费才能使用的商业特性。 
+　　VisualVM（All-in-One Java Troubleshooting Tool）是功能最强大的运行监视和故障处理程序之一，曾经在很长一段时间内是 Oracle 官方主力发展的虚拟机故障处理工具。
 
- 
+　　Oracle 曾在 VisualVM 的软件说明中写上了 “ All-in-One ” 的字样，预示着它除了常规的运行监视、故障处理外，还将提供其他方面的能力，譬如性能分析（Profiling）。
 
- 
+　　VisualVM 的性能分析功能比起 JProfiler、YourKit 等专业且收费的 Profiling 工具都不遑多让。而且相比这些第三方工具，VisualVM 还有一个很大的优点：不需要被监视的程序基于特殊 Agent 去运行，因此它的通用性很强，对应用程序实际性能的影响也较小，使得它可以直接应用在生产环境中。这个优点是 JProfiler、YourKit 等工具无法与之媲美的。 
 
-JDK中提供了JCMD和JHSDB两个集成式的多功能工具箱，它们不仅整合了上一节介绍到的所有基础工具所能提供的专项功能，而且由于有着“后发
+　　VisualVM 基于 NetBeans 平台开发工具，所以一开始它就具备了通过插件扩展功能的能力。
 
- 
+　　有了插件扩展支持，VisualVM 可以做到： 
 
- 
+* 显示虚拟机进程以及进程的配置、环境信息（jps、jinfo）。 
+* 监视应用程序的处理器、垃圾收集、堆、方法区以及线程的信息（jstat、jstack）。 
+* dump 以及分析堆转储快照（ jmap、jhat ）。 
+* 方法级的程序运行性能分析，找出被调用最多、运行时间最长的方法。 
+* 离线程序快照：收集程序的运行时配置、线程 dump、内存 dump 等信息建立一个快照，可以将快照发送开发者处进行 Bug 反馈。 
+* 其他插件带来的无限可能性。 
 
-优势”，能够做得往往比之前的老工具们更好、更强大
+　　VisualVM 在 JDK 6 Update 7 中首次发布，但并不意味着它只能监控运行于 JDK 6 上的程序，它具备很优秀的向下兼容性，甚至能向下兼容至 2003 年发布的 JDK 1.4.2 版本￼，这对无数处于已经完成实施、正在维护的遗留项目很有意义。
 
- 
+　　当然，也并非所有功能都能完美地向下兼容，主要功能的兼容性见下表所示：
 
- 
+![](image/VisualVM主要功能兼容性列表.jpeg) 
 
-表4-15所示是JCMD、JHSDB与原基础工具实现相同功能的简要对比。 
+　　BTrace 能够实现动态修改程序行为，是因为它是基于 Java 虚拟机的 Instrument 开发的。Instrument 是 Java 虚拟机工具接口（ Java Virtual Machine Tool Interface，JVMTI ）的重要组件，提供了一套代理（ Agent ）机制，使得第三方工具程序可以以代理的方式访问和修改 Java 虚拟机内部的数据。阿里巴巴开源的诊断工具 Arthas 也通过 Instrument 实现了与 BTrace 类似的功能。 
 
- 
+### 4.3.4 Java Mission Control：可持续在线的监控工具  
 
- 
+　　除了大家熟知的面向通用计算（ General Purpose Computing ）可免费使用的 Java SE 外，Oracle 公司还开辟过带商业技术支持的 Oracle Java SE Support 和面向独立软件供应商（ ISV ）的 Oracle Java SE Advanced & Suite 产品线。 除去带有 7×24 小时的技术支持以及可以为企业专门定制安装包这些非技术类的增强服务外，Oracle Java SE Advanced & Suite￼ 与普通 Oracle Java SE 在功能上的主要差别是前者包含了一系列的监控、管理工具，譬如用于企业 JRE 定制管理的AMC（Java Advanced Management Console）控制台、JUT（Java Usage Tracker）跟踪系统，用于持续收集数据的JFR（Java Flight Recorder）飞行记录仪和用于监控 Java 虚拟机的 JMC（Java Mission Control）。这些功能全部都是需要商业授权才能在生产环境中使用，但根据 Oracle Binary Code 协议，在个人开发环境中，允许免费使用 JMC 和 JFR 。
 
-JHSDB是一款基于服务性代理（Serviceability Agent，SA）实现的进程外调试工具。服务性代理
+　　JFR 是一套内建在 HotSpot 虚拟机里面的监控和基于事件的信息搜集框架，与其他的监控工具（如 JProfiling ）相比，Oracle 特别强调它 “ 可持续在线 ”（Always-On）的特性。JFR 在生产环境中对吞吐量的影响一般不会高于 1%（甚至号称是Zero Performance Overhead），而且 JFR 监控过程的开始、停止都是完全可动态的，即不需要重启应用。JFR 的监控对应用也是完全透明的，即不需要对应用程序的源码做任何修改，或者基于特定的代理来运行。 
 
- 
+　　JMC 最初是 BEA 公司的产品，因此并没有像 VisualVM 那样一开始就基于自家的 Net-Beans 平台来开发，而是选择了由 IBM 捐赠的 Eclipse RCP 作为基础框架，现在的 JMC 不仅可以下载到独立程序，更常见的是作为 Eclipse 的插件来使用。JMC 与虚拟机之间同样采取 JMX 协议进行通信，JMC 一方面作为 JMX 控制台，显示来自虚拟机 MBean 提供的数据；另一方面作为 JFR 的分析工具，展示来自 JFR 的数据。
 
- 
+　　即使不考虑对被测试程序性能影响方面的优势，JFR 提供的数据质量通常也要比其他工具通过代理形式采样获得或者从 MBean 中取得的数据高得多。 
 
-是HotSpot虚拟机中一组用于映射Java虚拟机运行信息的、主要基于Java语言（含少量JNI代码）实现的API集合
+　　以垃圾搜集为例，HotSpot 的 MBean 中一般有各个分代大小、收集次数、时间、占用率等数据（ 根据收集器不同有所差别 ），这些都属于 “ 结果 ” 类的信息，而 JFR 中还可以看到内存中这段时间分配了哪些对象、哪些在 TLAB 中（或外部）分配、分配速率和压力大小如何、分配归属的线程、收集时对象分代晋升的情况等，这些就是属于 “ 过程 ” 类，对排查问题的价值时难以估量的 。
 
- 
+## 4.4 HotSpot 虚拟机插件及工具 
 
- 
+　　虚拟机的插件和辅助工具，它们存放 在HotSpot 源码 hotspot/src/share/tools 目录下，包括（含曾经有过但新版本中已被移除的）：
 
-服务性代理以HotSpot内部的数据结构为参照物进行设计，把这些C++的数据抽象出Java模型对象，相当于HotSpot的C++代码的一个镜像。通过服务性代理的API，可以在一个独立的Java虚拟机的进程里分析其他HotSpot虚拟机的内部数据，或者从HotSpot虚拟机进程内存中dump出来的转储快照里还原出它的运行状态细节。服务性代理的工作原理跟Linux上的GDB或者Windows上的Windbg是相似的。
+* Ideal Graph Visualizer：用于可视化展示 C2 即时编译器是如何将字节码转化为理想图，然后转化为机器码的。
+* Client Compiler Visualizer：用于查看 C1 即时编译器生成高级中间表示（HIR），转换成低级中间表示（LIR）和做物理寄存器分配的过程。
+* MakeDeps：帮助处理 HotSpot 的编译依赖的工具。
+* Project Creator：帮忙生成 Visual Studio 的 .project 文件的工具。
+* LogCompilation：将 -XX：+LogCompilation 输出的日志整理成更容易阅读的格式的工具。
+* HSDIS：即时编译器的反汇编插件。
 
- 
+### 4.4.1 HSDIS：JIT 生成代码反汇编
 
- 
+　　HSDIS 是一个被官方推荐的 HotSpot 虚拟机即时编译代码的反汇编插件，它包含在 HotSpot 虚拟机的源码当中，在 OpenJDK 的网站也可以找到单独的源码下载，但并没有提供编译后的程序。
 
-staticObj随着Test的类型信息存放在方法区，instanceObj随着Test的对象实例存放在Java堆，localObject则是存放在foo()方法栈帧的局部变量表中
+　　HSDIS 插件的作用是让 HotSpot 的 -XX：+PrintAssembly 指令调用它来把即时编译器动态生成的本地代码还原为汇编代码输出，同时还会自动产生大量非常有价值的注释，这样就可以通过输出的汇编代码来从最本质的角度分析问题。
 
- 
+　　可以根据自己的操作系统和处理器型号，从网上直接搜索、下载编译好的插件，直接放到 JDK_HOME/jre/bin/server 目录（ JDK 9 以下 ）或 JDK_HOME/lib/amd64/server（ JDK 9 或以上）中即可使用。如果确实没有找到所采用操作系统的对应编译成品，那就自己用源码编译一遍（ 网上能找到各种操作系统下的编译教程 ）。
 
- 
+　　如果使用的是 SlowDebug 或者 FastDebug 版的 HotSpot，那可以直接通过 -XX：+PrintAssembly 指令使用的插件；如果使用的是 Product 版的 HotSpot，则还要额外加入一个 -XX：+UnlockDiagnosticVMOptions 参数才可以工作。 
 
-从《Java虚拟机规范》所定义的概念模型来看，所有Class相关的信息都应该存放在方法区之中，但方法区该如何实现，《Java虚拟机规范》并未做出规定，这就成了一件允许不同虚拟机自己灵活把握的事情。JDK 7及其以后版本的HotSpot虚拟机选择把静态变量与类型在Java语言一端的映射Class对象存放在一起，存储于Java堆之中
+　　JITWatch 是 HSDIS 经常搭配使用的可视化的编译日志分析工具，为便于在 JITWatch 中读取。
 
- 
+　　可使用以下参数把日志输出到 logfile 文件：-XX:+UnlockDiagnosticVMOptions-XX:+TraceClassLoading-XX:+LogCompilation-XX:LogFile=/tmp/logfile.log-XX:+PrintAssembly-XX:+TraceClassLoading。
 
- 
+　　在 JITWatch 中加载日志后，就可以看到执行期间使用过的各种对象类型和对应调用过的方法了。
 
-JConsole（Java Monitoring and Management Console）是一款基于JMX（Java Manage-ment Extensions）的可视化监视、管理工具
+## 4.5 本章小结
 
- 
+　　本章介绍了随 JDK 发布的 6 个命令行工具与 4 个可视化的故障处理工具，灵活使用这些工具，可以为处理问题带来很大的便利。
 
- 
+　　如果使用的是非 HotSpot 系的虚拟机，就更需要使用对应的工具进行分析，如：
 
-它的主要功能是通过JMX的MBean（Managed Bean）对系统进行信息收集和参数动态调整。JMX是一种开放性的技术，不仅可以用在虚拟机本身的管理上，还可以运行于虚拟机之上的软件中，典型的如中间件大多也基于JMX来实现管理与监控。虚拟机对JMX MBean的访问也是完全开放的，可以使用代码调用API、支持JMX协议的管理控制台，或者其他符合JMX规范的软件进行访问。 
+* IBM 的 Support Assistant、Heap Analyzer、Javacore Analyzer、Garbage Collecto Analyzer 适用于 IBM J9/OpenJ9 VM。
 
- 
+* HP 的 HPjmeter、HPjtune 适用于 HP-UX、SAP、HotSpot VM。
 
- 
-
-VisualVM（All-in-One Java Troubleshooting Tool）是功能最强大的运行监视和故障处理程序之一，曾经在很长一段时间内是Oracle官方主力发展的虚拟机故障处理工具
-
- 
-
- 
-
-Oracle曾在VisualVM的软件说明中写上了“All-in-One”的字样，预示着它除了常规的运行监视、故障处理外，还将提供其他方面的能力，譬如性能分析（Profiling）
-
- 
-
- 
-
-VisualVM的性能分析功能比起JProfiler、YourKit等专业且收费的Profiling工具都不遑多让。而且相比这些第三方工具，VisualVM还有一个很大的优点：不需要被监视的程序基于特殊Agent去运行，因此它的通用性很强，对应用程
-
- 
-
- 
-
-实际性能的影响也较小，使得它可以直接应用在生产环境中。这个优点是JProfiler、YourKit等工具无法与之媲美的。 
-
- 
-
- 
-
-VisualVM基于NetBeans平台开发工具，所以一开始它就具备了通过插件扩展功能的能力，有了插件扩展支持，VisualVM可以做到： ·显示虚拟机进程以及进程的配置、环境信息（jps、jinfo）。 ·监视应用程序的处理器、垃圾收集、堆、方法区以及线程的信息（jstat、jstack）。 ·dump以及分析堆转储快照（jmap、jhat）。 ·方法级的程序运行性能分析，找出被调用最多、运行时间最长的方法。 ·离线程序快照：收集程序的运行时配置、线程dump、内存dump等信息建立一个快照，可以将快照发送开发者处进行Bug反馈。 ·其他插件带来的无限可能性。 
-
- 
-
- 
-
-VisualVM在JDK 6 Update 7中首次发布，但并不意味着它只能监控运行于JDK 6上的程序，它具备很优秀的向下兼容性，甚至能向下兼容至2003年发布的JDK 1.4.2版本￼，这对无数处于已经完成实施、正在维护的遗留项目很有意义。当然，也并非所有功能都能完美地向下兼容，主要功能的兼容性见表4-16所示。 
-
- 
-
- 
-
-BTrace能够实现动态修改程序行为，是因为它是基于Java虚拟机的Instrument开发的。Instrument是Java虚拟机工具接口（Java Virtual Machine Tool Interface，JVMTI）的重要组件，提供了一套代理（Agent）机制，使得第三方工具程序可以以代理的方式访问和修改Java虚拟机内部的数据。阿里巴巴开源的诊断工具Arthas也通过Instrument实现了与BTrace类似的功能。 
-
- 
-
- 
-
-除了大家熟知的面向通用计算（General Purpose Computing）可免费使用的Java SE外，Oracle公司还开辟过带商业技术支持的Oracle Java SE Support和面向独立软件供应商（ISV）的Oracle Java SE Advanced & Suite产品线。 除去带有7×24小时的技术支持以及可以为企业专门定制安装包这些非技术类的增强服务外，Oracle Java SE Advanced & Suite￼与普通Oracle Java SE在功能上的主要差别是前者包含了一系列的监控、管理工具，譬如用于企业JRE定制管理的AMC（Java Advanced Management Console）控制台、JUT（Java Usage Tracker）跟踪系统，用于持续收集数据的JFR（Java Flight Recorder）飞行记录仪和用于监控Java虚拟机的JMC（Java Mission Control）。这些功能全部都是需要商业授权才能在生产环境中使用，但根据Oracle Binary Code协议，在个人开发环境中，允许免费使用JMC和JFR
-
- 
-
- 
-
-JFR是一套内建在HotSpot虚拟机里面的监控和基于事件的信息搜集框架，与其他的监控工具（如JProfiling）相比，Oracle特别强调它“可持续在线”（Always-On）的特性。JFR在生产环境中对吞吐量的影响一般不会高于1%（甚至号称是Zero Performance Overhead），而且JFR监控过程的开始、停止都是完全可动态的，即不需要重启应用。JFR的监控对应用也是完全透明的，即不需要对应用程序的源码做任何修改，或者基于特定的代理来运行。 
-
- 
-
- 
-
-JMC最初是BEA公司的产品，因此并没有像VisualVM那样一开始就基于自家的Net-Beans平台来开发，而是选择了由IBM捐赠的Eclipse RCP作为基础框架，现在的JMC不仅可以下载到独立程序，更常见的是作为Eclipse的插件来使用。JMC与虚拟机之间同样采取JMX协议进行通信，JMC一方面作为JMX控制台，显示来自虚拟机MBean提供的数据；另一方面作为JFR的分析工具，展示来自JFR的数据
-
- 
-
- 
-
-即使不考虑对被测试程序性能影响方面的优势，JFR提供的数据质量通常也要比其他工具通过代理形式采样获得或者从MBean中取得的数据高得多。
-
- 
-
- 
-
-以垃圾搜集为例，HotSpot的MBean中一般有各个分代大小、收集次数、时间、占用率等数据（根据收集器不同有所差别），这些都属于“结果”类的信息，而JFR中还可以看到内存中这段时间分配了哪些对象、哪些在TLAB中（或外部）分配、分配速率和压力大小如何、分配归属的线程、收集时对象分代晋升的情况等，这些就是属于“过程”类 
-
-
-
-
-
-
-
-
-
+* Eclipse 的 Memory Analyzer Tool（MAT）适用于 HP-UX、SAP、HotSpot VM，安装 IBM DTFJ 插件后可支持 IBM J9 虚拟机。
