--- a/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
+++ b/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
@@ -2,264 +2,103 @@
 
 ## 3.1 概述
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
+　　垃圾收集（Garbage Collection，下文简称GC）。
 
-周志明
+　　为什么要去了解垃圾收集和内存分配？当需要排查各种内存溢出、内存泄漏问题时，当垃圾收集成为系统达到更高并发量的瓶颈时，就必须对这些 “ 自动化 ” 的技术实施必要的监控和调节。 
 
-37个笔记
+　　程序计数器、虚拟机栈、本地方法栈 3 个区域随线程而生，随线程而灭，栈中的栈帧随着方法的进入和退出而有条不紊地执行着出栈和入栈操作。每一个栈帧中分配多少内存基本上是在类结构确定下来时就已知的（ 尽管在运行期会由即时编译器进行一些优化，但在基于概念模型的讨论里，大体上可以认为是编译期可知的 ），因此这几个区域的内存分配和回收都具备确定性，在这几个区域内就不需要过多考虑如何回收的问题，当方法结束或者线程结束时，内存自然就跟随着回收了。 
 
-3.1 概述
+　　而 Java 堆和方法区这两个区域则有着很显著的不确定性：一个接口的多个实现类需要的内存可能会不一样，一个方法所执行的不同条件分支所需要的内存也可能不一样，只有处于运行期间，才能知道程序究竟会创建哪些对象，创建多少个对象，这部分内存的分配和回收是动态的。垃圾收集器所关注的正是这部分内存该如何管理，后续讨论中的 “ 内存 ” 分配与回收也仅仅特指这一部分内存。 
 
- 
+## 3.2 对象已死？
 
-垃圾收集（Garbage Collection，下文简称GC）
+　　在堆里面存放着 Java 世界中几乎所有的对象实例，垃圾收集器在对堆进行回收前，第一件事情就是要确定这些对象之中哪些还 “ 存活 ” 着，哪些已经 “ 死去 ”（ “ 死去 ” 即不可能再被任何途径使用的对象）了。 
 
- 
+### 3.2.1 引用计数算法
 
- 
+　　很多教科书判断对象是否存活的算法是这样的：在对象中添加一个引用计数器，每当有一个地方引用它时，计数器值就加一；当引用失效时，计数器值就减一；任何时刻计数器为零的对象就是不可能再被使用的。
 
-为什么我们还要去了解垃圾收
+　　引用计数算法（ Reference Counting ）虽然占用了一些额外的内存空间来进行计数，但它的原理简单，判定效率也很高。
 
- 
+　　引用计数的一些比较著名的应用案例，例如微软COM（Component Object Model）技术、使用 ActionScript 3 的 FlashPlayer、Python 语言以及在游戏脚本领域得到许多应用的 Squirrel 中都使用了引用计数算法进行内存管理。
 
- 
+　　但是，在 Java 领域，至少主流的 Java 虚拟机里面都没有选用引用计数算法来管理内存，主要原因是，这个看似简单的算法有很多例外情况要考虑，必须要配合大量额外处理才能保证正确地工作，譬如单纯的引用计数就很难解决对象之间相互循环引用的问题。 
 
-和内存分配？答案很简单：当需要排查各种内存溢出、内存泄漏问题时，当垃圾收集成为系统达到更高并发量的瓶颈时，我们就必须对这些“自动化”的技术实施必要的监控和调节。 
+ ### 3.2.2 可达性分析算法
 
- 
+　　当前主流的商用程序语言（ Java、C#，上溯至前面古老的Lisp）的内存管理子系统，都是通过可达性分析（Reachability Analysis）算法来判定对象是否存活的。
 
- 
+　　可达性分析算法的基本思路就是通过一系列称为 “ GC Roots ” 的根对象作为起始节点集，从这些节点开始，根据引用关系向下搜索，搜索过程所走过的路径称为 “ 引用链 ”（Reference Chain），如果某个对象到 GC Roots 间没有任何引用链相连，或者用图论的话来说就是从 GC Roots 到这个对象不可达时，则证明此对象是不可能再被使用的。 
 
-程序计数器、虚拟机栈、本地方法栈3个区域随线程而生，随线程而灭，栈中的栈帧随着方法的进入和退出而有条不紊地执行着出栈和入栈操作。每一个栈帧中分配多少内存基本上是在类结构确定下来时就已知的（尽管在运行期会由即时编译器进行一些优化，但在基于概念模型的讨论里，大体上可以认为是编译期可知的），因此这几个区域的内存分配和回收都具备确定性，在这几个区域内就不需要过多考虑如何回收的问题，当方法结束或者线程结束时，内存自然就跟随着回收了。 
+　　GC Roots 的对象包括以下几种： 
 
- 
+* 在虚拟机栈（ 栈帧中的本地变量表 ）中引用的对象，譬如各个线程被调用的方法堆栈中使用到的参数、局部变量、临时变量等。 
+* 在方法区中类静态属性引用的对象，譬如 Java 类的引用类型静态变量。 
+* 在方法区中常量引用的对象，譬如字符串常量池（ String Table ）里的引用。 
+* 在本地方法栈中 JNI（ 即通常所说的 Native 方法 ）引用的对象。 
+* Java 虚拟机内部的引用，如基本数据类型对应的 Class 对象，一些常驻的异常对象（ 比如 NullPointExcepiton、OutOfMemoryError ）等，还有系统类加载器。 
+* 所有被同步锁（ synchronized 关键字 ）持有的对象。 
+* 反映 Java 虚拟机内部情况的 JMXBean、JVMTI 中注册的回调、本地代码缓存等。
 
- 
+　　除了这些固定的 GC Roots 集合以外，根据用户所选用的垃圾收集器以及当前回收的内存区域不同，还可以有其他对象 “ 临时性 ” 地加入，共同构成完整 GC Roots 集合。
 
-而Java堆和方法区这两个区域则有着很显著的不确定性：一个接口的多个实现类需要的内存可能会不一样，一个方法所执行的不同条件分支所需要的内存也可能不一样，只有处于运行期间，我们才能知道程序究竟会创建哪些对象，创建多少个对象，这部分内存的分配和回收是动态的。垃圾收集器所关注的正是这部分内存该如何管理，本文后续讨论中的“内存”分配与回收也仅仅特指这一部分内存。 
+　　譬如分代收集和局部回收（Partial GC），如果只针对 Java 堆中某一块区域发起垃圾收集时（如最典型的只针对新生代的垃圾收集），必须考虑到内存区域是虚拟机自己的实现细节（在用户视角里任何内存区域都是不可见的），更不是孤立封闭的，所以某个区域里的对象完全有可能被位于堆中其他区域的对象所引用，这时候就需要将这些关联区域的对象也一并加入 GC Roots 集合中去，才能保证可达性分析的正确性。 
 
-3.2 对象已死？
+　　目前最新的几款垃圾回收器都具备了局部回收的特征，为了避免 GC Roots 包含过多对象而过度膨胀，它们在实现上也做出了各种优化处理。
 
- 
+### 3.2.3 再谈引用 
 
-在堆
+　　在 JDK 1.2 版之后，Java 对引用的概念进行了扩充，将引用分为强引用（ Strongly Re-ference ）、软引用（ Soft Reference ）、弱引用（ Weak Reference ）和虚引用（ Phantom Reference ）4 种，这 4 种引用强度依次逐渐减弱。 
 
- 
+* 强引用是最传统的 “ 引用 ” 的定义，是指在程序代码之中普遍存在的引用赋值，即类似 “ Object obj=new Object() ” 这种引用关系。无论任何情况下，只要强引用关系还存在，垃圾收集器就永远不会回收掉被引用的对象。
 
- 
+* 软引用是用来描述一些还有用，但非必须的对象。只被软引用关联着的对象，在系统将要发生内存溢出异常前，会把这些对象列进回收范围之中进行第二次回收，如果这次回收还没有足够的内存，才会抛出内存溢出异常。在 JDK 1.2 版之后提供了 SoftReference 类来实现软引用。 
+* 弱引用也是用来描述那些非必须对象，但是它的强度比软引用更弱一些，被弱引用关联的对象只能生存到下一次垃圾收集发生为止。当垃圾收集器开始工作，无论当前内存是否足够，都会回收掉只被弱引用关联的对象。在 JDK 1.2 版之后提供了 WeakReference 类来实现弱引用。 
+* 虚引用也称为 “ 幽灵引用 ” 或者 “ 幻影引用 ”，它是最弱的一种引用关系。一个对象是否有虚引用的存在，完全不会对其生存时间构成影响，也无法通过虚引用来取得一个对象实例。为一个对象设置虚引用关联的唯一目的只是为了能在这个对象被收集器回收时收到一个系统通知。在 JDK 1.2 版之后提供了 PhantomReference 类来实现虚引用。 
 
-里面存放着Java世界中几乎所有的对象实例，垃圾收集器在对堆进行回收前，第一件事情就是要确定这些对象之中哪些还“存活”着，哪些已经“死去”（“死去”即不可能再被任何途径使用的对象）了。 
+ ### 3.2.4 生存还是死亡？
 
- 
+　　即使在可达性分析算法中判定为不可达的对象，也不是 “ 非死不可 ” 的，这时候它们暂时还处于 “ 缓刑 ” 阶段，要真正宣告一个对象死亡，至少要经历两次标记过程：如果对象在进行可达性分析后发现没有与 GC Roots 相连接的引用链，那它将会被第一次标记，随后进行一次筛选，筛选的条件是此对象是否有必要执行 finalize() 方法。
 
- 
+　　假如对象没有覆盖 finalize() 方法，或者 finalize() 方法已经被虚拟机调用过，那么虚拟机将这两种情况都视为 “ 没有必要执行 ”。 
 
-很多教科书判断对象是否存活的算法是这样的：在对象中添加一个引用计数器，每当有一个地方引用它时，计数器值就加一；当引用失效时，计数器值就减一；任何时刻计数器为零的对象就是不可能再被使用的。
+　　如果这个对象被判定为确有必要执行 finalize() 方法，那么该对象将会被放置在一个名为 F-Queue 的队列之中，并在稍后由一条由虚拟机自动建立的、低调度优先级的 Finalizer 线程去执行它们的 finalize() 方法。
 
- 
+　　这里所说的 “ 执行 ” 是指虚拟机会触发这个方法开始运行，但并不承诺一定会等待它运行结束。这样做的原因是，如果某个对象的 finalize() 方法执行缓慢，或者更极端地发生了死循环，将很可能导致 F-Queue 队列中的其他对象永久处于等待，甚至导致整个内存回收子系统的崩溃。finalize() 方法是对象逃脱死亡命运的最后一次机会，稍后收集器将对 F-Queue 中的对象进行第二次小规模的标记，如果对象要在 finalize() 中成功拯救自己——只要重新与引用链上的任何一个对象建立关联即可，譬如把自己（ this 关键字）赋值给某个类变量或者对象的成员变量，那在第二次标记时它将被移出 “ 即将回收 ” 的集合；如果对象这时候还没有逃脱，那基本上它就真的要被回收了。
 
- 
+　　任何一个对象的 finalize() 方法都只会被系统自动调用一次。
 
-虽然占用了一些额外的内存空间来进行计数，但它的原理简单，判定效率也很高
+ ### 3.2.5 回收方法区
 
- 
+　　《 Java 虚拟机规范 》中提到过可以不要求虚拟机在方法区中实现垃圾收集，事实上也确实有未实现或未能完整实现方法区类型卸载的收集器存在（ 如 JDK 11 时期的 ZGC 收集器就不支持类卸载 ），方法区垃圾收集的 “ 性价比 ” 通常也是比较低的：在 Java 堆中，尤其是在新生代中，对常规应用进行一次垃圾收集通常可以回收 70% 至 99% 的内存空间，相比之下，方法区回收囿于苛刻的判定条件，其区域垃圾收集的回收成果往往远低于此。
 
- 
+　　方法区的垃圾收集主要回收两部分内容：废弃的常量和不再使用的类型。回收废弃常量与回收Java堆中的对象非常类似。
 
-应用案例，例如微软COM（Component Object Model）技术、使用ActionScript 3的FlashPlayer、Python语言以及在游戏脚本领域得到许多应用的Squirrel中都使用了引用计数算法进行内存管理。
+　　判定一个类型是否属于 “ 不再被使用的类 ” 的条件就比较苛刻了。需要同时满足下面三个条件： 
 
- 
+* 该类所有的实例都已经被回收，也就是 Java 堆中不存在该类及其任何派生子类的实例。 
+* 加载该类的类加载器已经被回收，这个条件除非是经过精心设计的可替换类加载器的场景，如 OSGi、JSP 的重加载等，否则通常是很难达成的。 
+* 该类对应的 java.lang.Class 对象没有在任何地方被引用，无法在任何地方通过反射访问该类的方法。 
 
- 
+　　Java 虚拟机被允许对满足上述三个条件的无用类进行回收，这里说的仅仅是 “ 被允许 ”，而并不是和对象一样，没有引用了就必然会回收。
 
-在Java领域，至少主流的Java虚拟机里面都没有选用引用计数算法来管理内存，主要原因是，这个看似简单的算法有很多例外情况要考虑，必须要配合大量额外处理才能保证正确地工作，譬如单纯的引用计数就很难解决对象之间相互循环引用的问题。 
+　　关于是否要对类型进行回收，HotSpot 虚拟机提供了 -Xnoclassgc 参数进行控制，还可以使用 -verbose：class 以及 -XX：+TraceClass-Loading、-XX：+TraceClassUnLoading 查看类加载和卸载信息，其中 -verbose：class 和 -XX：+TraceClassLoading 可以在 Product 版的虚拟机中使用， -XX：+TraceClassUnLoading 参数需要 FastDebug 版的虚拟机支持。
 
- 
-
- 
-
-当前主流的商用程序语言（Java、C#，上溯至前面提到的古老的Lisp）的内存管理子系统，都是通过可达性分析（Reachability Analysis）算法来判定对象是否存活的。
-
- 
-
- 
-
-算法的基本思路就是通过一系列称为“GC Roots”的根对象作为起始节点集，从这些节点开始，根据引用关系向下搜索，搜索过程所走过的路径称为“引用链”（Reference Chain），如果某个对象到GC Roots间没有任何引用链相连，或者用图论的话来说就是从GC Roots到这个对象不可达时，则证明此对象是不可能再被使用的。 
-
- 
-
- 
-
-GC Roots的对象包括以下几种： ·在虚拟机栈（栈帧中的本地变量表）中引用的对象，譬如各个线程被调用的方法堆栈中使用到的参数、局部变量、临时变量等。 ·在方法区中类静态属性引用的对象，譬如Java类的引用类型静态变量。 ·在方法区中常量引用的对象，譬如字符串常量池（String Table）里的引用。 ·在本地方法栈中JNI（即通常所说的Native方法）引用的对象。 ·Java虚拟机内部的引用，如基本数据类型对应的Class对象，一些常驻的异常对象（比如NullPointExcepiton、OutOfMemoryError）等，还有系统类加载器。 ·所有被同步锁（synchronized关键字）持有的对象。 ·反映Java虚拟机内部情况的JMXBean、JVMTI中注册的回调、本地代码缓存
-
- 
-
- 
-
-等。
-
- 
-
- 
-
-除了这些固定的GC Roots集合以外，根据用户所选用的垃圾收集器以及当前回收的内存区域不同，还可以有其他对象“临时性”地加入，共同构成完整GC Roots集合。
-
- 
-
- 
-
-譬如后文将会提到的分代收集和局部回收（Partial GC），如果只针对Java堆中某一块区域发起垃圾收集时（如最典型的只针对新生代的垃圾收集），必须考虑到内存区域是虚拟机自己的实现细节（在用户视角里任何内存区域都是不可见的），更不是孤立封闭的，所以某个区域里的对象完全有可能被位于堆中其他区域的对象所引用，这时候就需要将这些关联区域的对象也一并加入GC Roots集合中去，才能保证可达性分析的正确性。 
-
- 
-
- 
-
-局部回收
-
- 
-
- 
-
-为了避免GC Roots包含过多对象而过度膨胀，它们在实现上也做出了各种优化处理
-
- 
-
- 
-
-在JDK 1.2版之后，Java对引用的概念进行了扩充，将引用分为强引用（Strongly Re-ference）、软引用（Soft Reference）、弱引用（Weak Reference）和虚引用（Phantom Reference）4种，这4种引用强度依次逐渐减弱。 
-
- 
-
- 
-
-引用是最传统的“引用”的定义，是指在程序代码之中普遍存在的引用赋值，即类似“Object obj=new Object()”这种引用关系。无论任何情况下，只要强引用关系还存在，垃圾收集器就永远不会回收掉被引用的对象。
-
- 
-
- 
-
-软引用是用来描述一些还有用，但非必须的对象。只被软引用关联着的对象，在系统将要发生内存溢出异常前，会把这些对象列进回收范围之中进行第二次回收，如果这次回收还没有足够的内存，才会抛出内存溢出异常。在JDK 1.2版之后提供了SoftReference类来实现软引用。 ·弱引用也是用来描述那些非必须对象，但是它的强度比软引用更弱一些，被弱引用关联的对象只能生存到下一次垃圾收集发生为止。当垃圾收集器开始工作，无论当前内存是否足够，都会回收掉只被弱引用关联的对象。在JDK 1.2版之后提供了WeakReference类来实现弱引用。 ·虚引用也称为“幽灵引用”或者“幻影引用”，它是最弱的一种引用关系。一个对象是否有虚引用的存在，完全不会对其生存时间构成影响，也无法通过虚引用来取得一个对象实例。为一个对象设置虚引用关联的唯一目的只是为了能在这个对象被收集器回收时收到一个系统通知。在JDK 1.2版之后提供了PhantomReference类来实现虚引用。 
-
- 
-
- 
-
-即使在可达性分析算法中判定为不可达的对象，也不是“非死不可”的，这时候
-
- 
-
- 
-
-它们暂时还处于“缓刑”阶段，要真正宣告一个对象死亡，至少要经历两次标记过程：如果对象在进行可达性分析后发现没有与GC Roots相连接的引用链，那它将会被第一次标记，随后进行一次筛选，筛选的条件是此对象是否有必要执行finalize()方法。
-
- 
-
- 
-
-假如对象没有覆盖finalize()方法，或者finalize()方法已经被虚拟机调用过，那么虚拟机将这两种情况都视为“没有必要执行”。 
-
- 
-
- 
-
-如果这个对象被判定为确有必要执行finalize()方法，那么该对象将会被放置在一个名为F-Queue的队列之中，并在稍后由一条由虚拟机自动建立的、低调度优先级的Finalizer线程去执行它们的finalize()方法。
-
- 
-
- 
-
-这里所说的“执行”是指虚拟机会触发这个方法开始运行，但并不承诺一定会等待它运行结束
-
- 
-
- 
-
-原因是，如果某个对象的finalize()方法执行缓慢，或者更极端地发生了死循环，将很可能导致F-Queue队列中的其他对象永久处于等待，甚至导致整个内存回收子系统的崩溃。finalize()方法是对象逃脱死亡命运的最后一次机会，稍后收集器将对F-Queue中的对象进行第二次小规模的标记，如果对象要在finalize()中成功拯救自己——只要重新与引用链上的任何一个对象建立关联即可，譬如把自己（this关键字）赋值给某个类变量或者对象的成员变量，那在第二次标记时它将被移出“即将回收”的集合；如果对象这时候还没有逃脱，那基本上它就真的要被回收了。
-
- 
-
- 
-
-任何一个对象的finalize()方法都只会被系统自动调用一次，
-
- 
-
- 
-
-未
-
- 
-
- 
-
-实现或未能完整实现方法区类型卸载的收集器
-
- 
-
- 
-
-方法区的垃圾收集主要回收两部分内容：废弃的常量和不再使用的类型。
-
- 
-
- 
-
-回收废弃常量与回收Java堆中的对象非常类似
-
- 
-
- 
-
-判定一个类型是否属于“不再被使用的类”的条件就比较苛刻了。需要同时满足下面三个条件： ·该类所有的实例都已经被回收，也就是Java堆中不存在该类及其任何派生子类的实例。 ·加载该类的类加载器已经被回收，这个条件除非是经过精心设计的可替换类加载器的场景，如OSGi、JSP的重加载等，否则通常是很难达成的。 ·该类对应的java.lang.Class对象没有在任何地方被引用，无法在任何地方通过反射访问该类的方法。 
-
- 
-
- 
-
-Java虚拟机被允许对满足上述三个条件的无用类进行回收，这里说的仅仅是“被允许”，而并不是和对象一样，没有引用了就必然会回收
-
- 
-
- 
-
-关于是否要对类型进行回收，HotSpot虚拟机提供了-Xnoclassgc参数进行控制，还可以使用-verbose：class以及-XX：+TraceClass-Loading、-XX：+TraceClassUnLoading查看类加载和卸载信息，其中-verbose：class和-XX：+TraceClassLoading可以在Product版的虚拟机中使用，-XX：+TraceClassUnLoading参数需要FastDebug版 的虚拟机支持。 
-
- 
-
- 
-
-大量使用反射、动态代理、CGLib等字节码框架，动态生成JSP以及OSGi这类频繁自定义类加载器的场景中，通常都需要Java虚拟机具备类型卸载的能力，以保证不会对方法区造成过大的内存压力。 
-
-微信读书
-
-## 3.2 对象已死
+　　在大量使用反射、动态代理、CGLib 等字节码框架，动态生成 JSP 以及 OSGi 这类频繁自定义类加载器的场景中，通常都需要 Java 虚拟机具备类型卸载的能力，以保证不会对方法区造成过大的内存压力。 
 
 
 ## 3.3 垃圾收集算法
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
+　　从如何判定对象消亡的角度出发，垃圾收集算法可以划分为 “ 引用计数式垃圾收集 ”（Reference Counting GC）和 “ 追踪式垃圾收集 ”（Tracing GC）两大类，这两类也常被称作 “ 直接垃圾收集 ” 和 “ 间接垃圾收集 ”。
 
-周志明
+### 3.3.1 分代收集理论
 
-50个笔记
+　　当前商业虚拟机的垃圾收集器，大多数都遵循了 “ 分代收集 ”（Generational Collection） 的理论进行设计，分代收集名为理论，实质是一套符合大多数程序运行实际情况的经验法则，它建立在两个分代假说之上：
 
-3.3 垃圾收集算法
+1.  弱分代假说（Weak Generational Hypothesis）：绝大多数对象都是朝生夕灭的。 
+2. 强分代假说（Strong Generational Hypothesis）：熬过越多次垃圾收集过程的对象就越难以消亡。 
 
- 
-
-如何判定对象消亡的角度出发，垃圾收集算法可以划分为“引用计数式垃圾收集”（Reference Counting GC）和“追踪式垃圾收集”（Tracing GC）两大类，这两类也常被称作“直接垃圾收集”和“间接垃圾收集”。
-
- 
-
- 
-
-当前商业虚拟机的垃圾收集器，大多数都遵循了“分代收集”（Generational Collection） 的理论进行设计，分代收集名为理论，实质是一套符合大多数程序运行实际情况的经验法则，它建立在两个分代假说之上： 1）弱分代假说（Weak Generational Hypothesis）：绝大多数对象都是朝生夕灭的。 2）强分代假说（Strong Generational Hypothesis）：熬过越多次垃圾收集过程的对象就越难以消亡。 
-
- 
-
- 
-
-这两个分代假说共同奠定了多款常用的垃圾收集器的一致的设计原则：收集器应该将Java堆划分
+　　这两个分代假说共同奠定了多款常用的垃圾收集器的一致的设计原则：收集器应该将Java堆划分
 
  
 
@@ -3219,7 +3058,7 @@ NUMA（Non-Uniform Memory Access，非统一内存访问架构）是一种为多
 
 ### 3.7.1 Epsilon 收集器
 
- 　　Epsilon收集器由RedHat公司在JEP 318中提出。Epsilon 被形容称一个无操作的收集器（A No-Op Garbage Collector）。
+　　Epsilon收集器由RedHat公司在JEP 318中提出。Epsilon 被形容称一个无操作的收集器（A No-Op Garbage Collector）。
 
 　　垃圾收集器除了垃圾收集这个本职工作之外，它还要负责:
 
