--- a/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
+++ b/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
@@ -98,1175 +98,287 @@
 1.  弱分代假说（Weak Generational Hypothesis）：绝大多数对象都是朝生夕灭的。 
 2. 强分代假说（Strong Generational Hypothesis）：熬过越多次垃圾收集过程的对象就越难以消亡。 
 
-　　这两个分代假说共同奠定了多款常用的垃圾收集器的一致的设计原则：收集器应该将Java堆划分
+　　这两个分代假说共同奠定了多款常用的垃圾收集器的一致的设计原则：收集器应该将 Java 堆划分出不同的区域，然后将回收对象依据其年龄（ 年龄即对象熬过垃圾收集过程的次数 ）分配到不同的区域之中存储。显而易见，如果一个区域中大多数对象都是朝生夕灭，难以熬过垃圾收集过程的话，那么把它们集中放在一起，每次回收时只关注如何保留少量存活而不是去标记那些大量将要被回收的对象，就能以较低代价回收到大量的空间；如果剩下的都是难以消亡的对象，那把它们集中放在一块，虚拟机便可以使用较低的频率来回收这个区域，这就同时兼顾了垃圾收集的时间开销和内存的空间有效利用。 
 
- 
+　　在 Java 堆划分出不同的区域之后，垃圾收集器才可以每次只回收其中某一个或者某些部分的区域，也才能够针对不同的区域安排与里面存储对象存亡特征相匹配的垃圾收集算法（“ 标记 - 复制算法 ” “ 标记 - 清除算法 ” “ 标记 - 整理算法 ” 等针对性的垃圾收集算法）。
 
- 
+　　把分代收集理论具体放到现在的商用 Java 虚拟机里，设计者一般至少会把 Java 堆划分为新生代（Young Generation）和老年代（Old Generation）两个区域。顾名思义，在新生代中，每次垃圾收集时都发现有大批对象死去，而每次回收后存活的少量对象，将会逐步晋升到老年代中存放。
 
-出不同的区域，然后将回收对象依据其年龄（年龄即对象熬过垃圾收集过程的次数）分配到不同的区域之中存储。显而易见，如果一个区域中大多数对象都是朝生夕灭，难以熬过垃圾收集过程的话，那么把它们集中放在一起，每次回收时只关注如何保留少量存活而不是去标记那些大量将要被回收的对象，就能以较低代价回收到大量的空间；如果剩下的都是难以消亡的对象，那把它们集中放在一块，虚拟机便可以使用较低的频率来回收这个区域，这就同时兼顾了垃圾收集的时间开销和内存的空间有效利用。 
+　　分代收集的困难：对象不是孤立的，对象之间会存在跨代引用。
 
- 
+　　为了解决这个问题，就需要对分代收集理论添加第三条经验法则：
 
- 
+3. 跨代引用假说（Intergenerational Reference Hypothesis）：跨代引用相对于同代引用来说仅占极少数。
 
-Java堆划分出不同的区域之后，垃圾收集器才可以每次只回收其中某一个或者某些部分的区域
+　　跨代引用家说的隐含推论：存在互相引用关系的两个对象，是应该倾向于同时生存或者同时消亡的。
 
- 
+　　依据这条假说，就不应再为了少量的跨代引用去扫描整个老年代，也不必浪费空间专门记录每一个对象是否存在及存在哪些跨代引用，只需在新生代上建立一个全局的数据结构（ 该结构被称为 “ 记忆集 ”，Remembered Set ），这个结构把老年代划分成若干小块，标识出老年代的哪一块内存会存在跨代引用。此后当发生 Minor GC 时，只有包含了跨代引用的小块内存里的对象才会被加入到 GC Roots进行扫描。虽然这种方法需要在对象改变引用关系（ 如将自己或者某个属性赋值 ）时维护记录数据的正确性，会增加一些运行时的开销，但比起收集时扫描整个老年代来说仍然是划算的。
 
- 
+* 部分收集（ Partial GC ）：指目标不是完整收集整个 Java 堆的垃圾收集，其中又分为：
+  * 新生代收集（Minor GC/Young GC）：指目标只是新生代的垃圾收集。
+  * 老年代收集（Major GC/Old GC）：指目标只是老年代的垃圾收集。CMS收集器会有单独收集老年代的行为。
 
-也才能够针对不同的区域安排与里面存储对象存亡特征相匹配的垃圾收集算法
+* 混合收集（Mixed GC）：指目标是收集整个新生代以及部分老年代的垃圾收集。m氨只有 G1 收集器会有混合收集。
 
- 
+* 整堆收集（Full GC）：收集整个 Java 堆和方法区的垃圾收集。
 
- 
+ ### 3.3.2 标记 - 清除算法 
 
-标记-复制算法”“标记-清除算法”“标记-整理算法”等针对性的垃圾收集算法
+　　最早出现、最基础的垃圾收集算法是 " 标记 - 清除 " 算法。
 
- 
+　　1960 年由 Lisp 之父 John McCarthy 提出。
 
- 
+　　算法分为 “ 标记 ” 和 “ 清除 ” 两个阶段：首先标记出所有需要回收的对象，在标记完成后，统一回收掉所有被标记的对象，也可以反过来，标记存活的对象，统一回收所有未被标记的对象。标记过程就是对象是否属于垃圾的判定过程，
 
-分代收集理论。
+　　后续的收集算法大多都是以标记 - 清除算法为基础，对其缺点进行改进而得到的。
 
- 
+　　主要缺点有两个：
 
- 
+1. 第一个是执行效率不稳定，如果 Java 堆中包含大量对象，而且其中大部分是需要被回收的，这时必须进行大量标记和清除的动作，导致标记和清除两个过程的执行效率都随对象数量增长而降低；
+2. 第二个是内存空间的碎片化问题，标记、清除之后会产生大量不连续的内存碎片，空间碎片太多可能会导致当以后在程序运行过程中需要分配较大对象时无法找到足够的连续内存而不得不提前触发另一次垃圾收集动作
 
-把分代收集理论具体放到现在的商用Java虚拟机里，设计者一般至少会把Java堆划分为新生代（Young Generation）和老年代（Old Generation）
+　　” 标记 - 清除 “ 算法示意图：
 
- 
+![](image/标记清除算法示意图.jpeg)
 
- 
+ ### 3.3.3 标记 - 复制算法 
 
-两个区域[插图]。顾名思义，在新生代中，每次垃圾收集时都发现有大批对象死去，而每次回收后存活的少量对象，将会逐步晋升到老年代中存放
+ 　　为了解决标记 - 清除算法面对大量可回收对象时执行效率低的问题，1969 年 Fenichel 提出了一种称为 “ 半区复制 ”（Semispace Copying）的垃圾收集算法。它将可用内存按容量划分为大小相等的两块，每次只使用其中的一块。当这一块的内存用完了，就将还存活着的对象复制到另外一块上面，然后再把已使用过的内存空间一次清理掉。如果内存中多数对象都是存活的，这种算法将会产生大量的内存间复制的开销，但对于多数对象都是可回收的情况，算法需要复制的就是占少数的存活对象，而且每次都是针对整个半区进行内存回收，分配内存时也就不用考虑有空间碎片的复杂情况，只要移动堆顶指针，按顺序分配即可。
 
- 
+ 　　优点：实现简单，运行高效。
 
- 
+　　缺点：可用内存缩小为了原来的一半，空间浪费未免太多了一点。
 
-分代收集
+　　” 标记 - 复制 “ 算法示意图：
 
- 
+![](image/标记复制算法示意图.jpeg)
 
- 
+　　现在的商用 Java 虚拟机大多都优先采用了这种收集算法去回收新生代。
 
-困难：对象不是孤立的，对象之间会存在跨代引用。
+　　" 朝生夕灭 " 特点诠释：新生代中的对象有 98% 熬不过第一轮收集。
 
- 
+　　在 1989 年，Andrew Appel 提出了一种更优化的半区复制分代策略，现在称为 “ Appel 式回收 ”。HotSpot 虚拟机的 Serial、ParNew 等新生代收集器均采用了这种策略来设计新生代的内存布局。
 
- 
+　　Appel 式回收的具体做法是把新生代分为一块较大的 Eden 空间和两块较小的 Survivor 空间，每次分配内存只使用 Eden 和其中一块 Survivor。发生垃圾搜集时，将 Eden 和 Survivor 中仍然存活的对象一次性复制到另外一块 Survivor 空间上，然后直接清理掉 Eden 和已用过的那块 Survivor 空间。HotSpot 虚拟机默认 Eden 和 Survivor 的大小比例是 8∶1，也即每次新生代中可用内存空间为整个新生代容量的 90%。
 
-为了解决这个问题，就需要对分代收集理论添加第三条经验法则：
+　　Appel 式回收还有一个充当罕见情况的 “ 逃生门 ” 的安全设计，当 Survivor 空间不足以容纳一次 Minor GC 之后存活的对象时，就需要依赖其他内存区域（ 实际上大多就是老年代 ）进行分配担保（ Handle Promotion ）。
 
- 
+　　如果另外一块 Survivor 空间没有足够空间存放上一次新生代收集下来的存活对象，这些对象便将通过分配担保机制直接进入老年代，这对虚拟机来说就是安全的。
 
- 
+### 3.3.4 标记 - 整理算法
 
-跨代引用假说
+　　标记 - 复制算法在对象存活率较高时就要进行较多的复制操作，效率将会降低。而且，如果不想浪费 50% 的空间，就需要有额外的空间进行分配担保，以应对被使用的内存中所有对象都 100% 存活的极端情况，所以在老年代一般不能直接选用这种算法。
 
- 
+　　针对老年代对象的存亡特征。1974 年 Edward Lueders 提出了有针对性地 ” 标记 - 整理 “（Mark-Compact）算法。其中标记过程仍然与 “ 标记-清除 ” 算法一样，但后续步骤不是直接对可回收对象进行清理，而是让所有存活的对象都向内存空间一端移动，然后直接清理掉边界以外的内存。
 
- 
+　　” 标记 - 整理 “ 算法地示意图如下所示：
 
-跨代引用相对于同代引用来说仅占极少数。
+![](image/标记整理算法示意图.jpg)
 
- 
+　　标记 - 清除算法与标记 - 整理算法的本质差异在于前者是一种非移动式的回收算法，而后者是移动式的。是否移动回收后的存活对象是一项优缺点并存的风险决策：如果移动存活对象，尤其是在老年代这种每次回收都有大量对象存活区域，移动存活对象并更新所有引用这些对象的地方将会是一种极为负重的操作，而且这种对象移动操作必须全程暂停用户应用程序才能进行。
 
- 
+　　但如果跟标记 - 清除算法那样完全不考虑移动和整理存活对象的话，弥散于堆中的存活对象导致的空间碎片化问题就只能依赖更为复杂的内存分配器和内存访问器来解决。
 
-存在互相引用关系的两个对象，是应该倾向于同时生存或者同时消亡的。
+　　内存的访问是用户程序最频繁的操作，甚至都没有之一，假如在这个环节上增加了额外的负担，势必会直接影响应用程序的吞吐量。
 
- 
+　　基于以上两点，是否移动对象都存在弊端，移动则内存回收时会更复杂，不移动则内存分配时会更复杂。
 
- 
+　　从垃圾收集的停顿时间来看，不移动对象停顿时间会更短，甚至可以不需要停顿，但是从整个程序的吞吐量来看，移动对象会更划算。
 
-依据这条假说，我们就不应再为了少量的跨代引用去扫描整个老年代，也不必浪费空间专门记录每一个对象是否存在及存在哪些跨代引用
+　　吞吐量的实质是赋值器（Mutator，可以理解为使用垃圾收集的用户程序，为便于理解，多数地方用 “ 用户程序 ” 或 “ 用户线程 ” 代替）与收集器的效率总和。
 
- 
+　　即使不移动对象会使得收集器的效率提升一些，但因内存分配和访问相比垃圾收集频率要高得多，这部分的耗时增加，总吞吐量仍然是下降的。
 
- 
+　　HotSpot 虚拟机里面关注吞吐量的 Parallel Scavenge 收集器是基于标记 - 整理算法的，而关注延迟的 CMS 收集器则是基于标记 - 清除算法的。
 
-只需在新生代上建立一个全局的数据结构（该结构被称为“记忆集”，Remembered Set），这个结构把老年代划分成若干
-
- 
-
- 
-
-小块，标识出老年代的哪一块内存会存在跨代引用。此后当发生Minor GC时，只有包含了跨代引用的小块内存里的对象才会被加入到GC Roots进行扫描。虽然这种方法需要在对象改变引用关系（如将自己或者某个属性赋值）时维护记录数据的正确性，会增加一些运行时的开销，但比起收集时扫描整个老年代来说仍然是划算的。
-
- 
-
- 
-
-部分收集（Partial GC）：指目标不是完整收集整个Java堆的垃圾收集，其中又分为：
-
- 
-
- 
-
-新生代收集（Minor GC/Young GC）：指目标只是新生代的垃
-
- 
-
- 
-
-圾收集。
-
- 
-
- 
-
-老年代收集（Major GC/Old GC）：指目标只是老年代的垃圾收集。
-
- 
-
- 
-
-CMS收集器会有单独收集老年代的行为
-
- 
-
- 
-
-混合收集（Mixed GC）：指目标是收集整个新生代以及部分老年代的垃圾收集。
-
- 
-
- 
-
-G1收集器会
-
- 
-
- 
-
-整堆收集（Full GC）：收集整个Java堆和方法区的垃圾收集。
-
- 
-
- 
-
-最早出
-
- 
-
- 
-
-最基础
-
- 
-
- 
-
-标记-清除
-
- 
-
- 
-
-1960
-
- 
-
- 
-
-Lisp之父John McCarthy
-
- 
-
- 
-
-算法分为“标记”和“清除”两个阶段：首先标记出所有需要回收的对象，在标记完成后，统一回收掉所有被标记的对象，也可以反过来，标记存活的对象，统一回收所有未被标记的对象。标记过程就是对象是否属于垃圾的判定过程，
-
- 
-
- 
-
-后续的收集算法大多都是以标记-清除算法为基础，对其缺点进行改进而得到的。
-
- 
-
- 
-
-主要缺点有两个
-
- 
-
- 
-
-第一个是执行效率不稳定，如果Java堆中包含大量对象，而且其中大部分是需要被回收的，这时必须进行大量标记和清除的动作，导致标记和清除两个过程的执行效率都随对象数量增长而降低；第二个是内存空间的碎片化问题，标记、清除之后会产生大量不连续的内存碎片，空间碎片太多可能会导致当以后在程序运行过程中需要分配较大对象时无法找到足够的连续内存而不得不提前触发另一次垃圾收集动作
-
- 
-
- 
-
-标记-复制算法
-
- 
-
- 
-
-复制算法
-
- 
-
- 
-
-了解决标记-清除算法面对大量可回收对象时执行效率低的问题
-
- 
-
- 
-
-1969年Fenichel提出了一种称为“半区复制”（Semispace Copying）的垃圾收集算
-
- 
-
- 
-
-它将可用内存按容量划分为大小相等的两块，每次只使用其中的一块。当这一块的内存用完了，就将还存活着的对象复制到另外一块上面，然后再把已使用过的内存空间一次清理掉。如果内存中多数对象都是存活的，这种算法将会产生大量的内存间复制的开销，但对于多数对象都是可回收的情况，算法需要复制的就是占少数的存活对象，而且每次都是针对整个半区进行内存回收，分配内存时也就不用考虑有空间碎片的复杂情况，只要移动堆顶指针，按顺序分配即可。
-
- 
-
- 
-
-实现简单
-
- 
-
- 
-
-运行高效，
-
- 
-
- 
-
-代价是将可用内存缩小为了原来的一半，空间浪费未免太多了一点。
-
- 
-
- 
-
-现在的商用Java虚拟机大多都优先采用了这种收集算法去回收新生代，
-
- 
-
- 
-
-朝生夕灭
-
- 
-
- 
-
-新生代中的对象有98%熬不过第一轮收集。
-
- 
-
- 
-
-Andrew Appel
-
- 
-
- 
-
-提出了一种更优化的半区复制分代策略，现在称为“Appel式回收”
-
- 
-
- 
-
-HotSpot虚拟机的Serial、ParNew等新生代收集器均采用了这种策略来设计新生代的内存布局
-
-微信读书
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-39个笔记
-
-3.3 垃圾收集算法
-
- 
-
-Appel式回收的具体做法是把新生代分为一块较大的Eden空间和两块较小的Survivor空间，每次分配内存只使用Eden和其中一块Survivor。发生垃圾搜集时，将Eden和Survivor中仍然存活的对象一次性复制到另外一块Survivor空间上，然后直接清理掉Eden和已用过的那块Survivor空间。HotSpot虚拟机默认Eden和Survivor的大小比例是8∶1，也即每次新生代中可用内存空间为整个新生代容量的90%
-
- 
-
- 
-
-Appel式回收还有一个充当罕见情况的“逃生门”的安全设计，当Survivor空间不足以容纳一次Minor GC之后存活的对象时，就需要依赖其他内存区域（实际上大多就是老年代）进行分配担保（Handle Promotion）。
-
- 
-
- 
-
-如果另外一块Survivor空间没有足够空间存放上一次新生代收集下来的存活对象，这些对象便将通过分配担保机制直接进入老年代，这对虚拟机来说就是安全的。
-
- 
-
- 
-
-标记-复制算法在对象存活率较高时就要进行较多的复制操作，效率将会降低。
-
- 
-
- 
-
-如果不想浪费50%的空间，就需要有额外的空间进行分配担保，以应对被使用的内存中所有对象都100%存活的极端情况，所以在老年代一般不能直接选用这种算法。
-
- 
-
- 
-
-老年代对象
-
- 
-
- 
-
-1974年Edward Lueders
-
- 
-
- 
-
-标记-整理
-
- 
-
- 
-
-标记过程仍然与“标记-清除”算法一样
-
- 
-
- 
-
-后续步骤不是直接对可回收对象进行清理，而是让所有存活的对象都向内存空间一端移动，然后直接清理掉边界以外的内存，
-
- 
-
- 
-
-标记-清除算法与标记-整理算法的本质差异在于前者是一种非移动式的回收算法，而后者是移动式的。是否移动回收后的存活对象是一项优缺点并存的风险决策：
-
- 
-
- 
-
-如果移动存活对象，尤其是在老年代这种每次回收都有大量对象存活区域，移动存活对象并更新所有引用这些对象的地方将会是一种极为负重的操作，而且这种对象移动操作必须全程暂停用户应用程序才能进行[插图]
-
- 
-
- 
-
-如果跟标记-清除算法那样完全不考虑移动和整理存活对象的话，弥散于堆中的存活对象导致的空间碎片化问题就只能依赖更为复杂的内存分配器和内存访问器来解决
-
- 
-
- 
-
-内存的访问是用户程序最频繁的操作，甚至都没有之一，假如在这个环节上增加了额外的负担，势必会直接影响应用程序的吞吐量。
-
- 
-
- 
-
-基于以上两点，是否移动对象都存在弊端，移动则内存回收时会更复杂，不移动则内存分配时会更复杂
-
- 
-
- 
-
-从垃圾收集的停顿时间来看，不移动对象停顿时间会更短，甚至可以不需要停顿，但是从整个程序的吞吐量来看，移动对象会更划算
-
- 
-
- 
-
-吞吐量的实质是
-
- 
-
- 
-
-赋值器（Mutator，可以理解为使用垃圾收集的用户程序，本书为便于理解，多数地方用“用户程序”或“用户线程”代替）与收集器的效率总和。
-
- 
-
- 
-
-即使不移动对象会使得收集器的效率提升一些，但因内存分配和访问相比垃圾收集频率要高得多，这部分的耗时增加，总吞吐量仍然是下降的。
-
- 
-
- 
-
-HotSpot虚拟机里面关注吞吐量的Parallel Scavenge收集器是基于标记-整理算法的，而关注延迟的CMS收集器则是基于标记-清除算法的
-
- 
-
- 
-
-可以不在内存分配和访问上增加太大额外负担，做法是让虚拟机平时多数时间都采用标记-清除算法，暂时容忍内存碎片的存在，直到内存空间的碎片化程度已经大到影响对象分配时，再采
-
- 
-
- 
-
-用标记-整理算法收集一次，以获得规整的内存空间。
-
- 
-
- 
-
-基于标记-清除算法的CMS收集器面临空间碎片过多时采用的就是这种处理办法。
-
-3.4 HotSpot的算法细节实现
-
- 
-
-固定可作为GC Roots的节点主要在全局性的引用（例如常量或类静态属性）与执行上下文（例如栈帧中的本地变量表）中，尽管目标明确，但查找过程要做到高效并非一件容易的事情，现在Java应用越做越庞大，光是方法区的大小就常有数百上千兆，里面的类、常量等更是恒河沙数，若要逐个检查以这里为起源的引用肯定得消耗不少时间。
-
- 
-
- 
-
-迄今为止，所有收集器在根节点枚举这一步骤时都是必须暂停用户线程的，因此毫无疑问根节点枚举与之前提及的整理内存碎片一样会面临相似的“Stop The World”的困扰
-
- 
-
- 
-
-可达性分析算法耗时最长的查找引用链的过程已经可以做到与用户线程一起并发
-
- 
-
- 
-
-但根节点枚举始终还是必须在一个能保障一致性的快照中才得以进行
-
- 
-
- 
-
-一致性”的意思是整个枚举期间执行子系统看起来就像被冻结在某个时间点上，不会出现分析过程中，根节点集合的对象引用关系还在不断变化的情况，若这点不能满足的话，分析结果准确性也就无法保证
-
- 
-
- 
-
-导致垃圾收集过程必须停顿所有用户线程的其中一个重要原因，即使是号称停顿时间可控，或者（几乎）不会发生停顿的CMS、G1、ZGC等收集器，枚举根节点时也是必须要停顿的。 
-
- 
-
- 
-
-目前主流Java虚拟机使用的都是准确式垃圾收集
-
- 
-
- 
-
-所以当用户线程停顿下来之后，其实并不需要一个不漏地检查完所有执行上下文和全局的引用位置，虚拟机应当是有办法直接得到哪些地方存放着对象引用的。
-
- 
-
- 
-
-HotSpot的解决方案里，是使用一组称为OopMap的数据结构来达到这个目的。一旦类加载动作完成的时候，HotSpot就会把对象内什么偏移量上是什么类型的数据计算出来，在即时编译（见第11章）过程中，也会在特定的位置记录下栈里和寄存器里哪些位置是引用。这样收集器在扫描时就可以直接得知这些信息了，并不需要真正一个不漏地从方法区等GC Roots开始查找。 
-
- 
-
- 
-
-在OopMap的协助下，HotSpot可以快速准确地完成GC Roots枚举，但一个很现实的问题随之而来：可能导致引用关系变化，或者说导致OopMap内容变化的指令非常多，如果为每一条指令都生成对应的OopMap，那将会需要大量的额外存储空间，这样垃圾收集伴随而来的空间成本就会变得无法忍受的高昂。 
-
- 
-
- 
-
-HotSpot也的确没有为每条指令都生成OopMap
-
- 
-
- 
-
-只是在“特定的位置”记录了这些信息，这些位置被称为安全点（Safepoint）。有了安全点的设定，也就决定了用户程序执行时并非在代码指令流的任意位置都能够停顿下来开始垃圾收集，而是强制要求必须执行到达安全点后才能够暂停
-
- 
-
- 
-
-安全点的选定既不能太少以至于让收集器等待时间过长，也不能太过频繁以至于过分增大运行时的内存负荷
-
- 
-
- 
-
-安全点位置的选取基本上是以“是否具有让程序长时间执行的特征”为标准进行选定的，因为每条指令执行的时间都非常短暂，程序不太可能因为指令流长度太长这样的原因而长时间执行，“长时间执行”的最明显特征就是指令序列的复用，例如方法调用、循环跳转、异常跳转等都属于指令序列复用，所以只有具有这些功能的指令才会产生安全点。 
-
- 
-
- 
-
-另外一个需要考虑的问题是，如何在垃圾收集发生时让所有线程（这里其实不包括执行JNI调用的线程）都跑到最近的安全点，然后停顿下来。
-
- 
-
- 
-
-两种方案
-
-微信读书
+　　也可以不在内存分配和访问上增加太大额外负担，做法是让虚拟机平时多数时间都采用标记 - 清除算法，暂时容忍内存碎片的存在，直到内存空间的碎片化程度已经大到影响对象分配时，再采用标记 - 整理算法收集一次，以获得规整的内存空间。基于标记 - 清除算法的 CMS 收集器面临空间碎片过多时采用的就是这种处理办法。
 
 ## 3.4 HotSpot 的算法细节实现
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
+### 3.4.1 根节点枚举
 
-周志明
+　　固定可作为 GC Roots 的节点主要在全局性的引用（例如常量或类静态属性）与执行上下文（例如栈帧中的本地变量表）中，尽管目标明确，但查找过程要做到高效并非一件容易的事情，现在 Java 应用越做越庞大，光是方法区的大小就常有数百上千兆，里面的类、常量等更是恒河沙数，若要逐个检查以这里为起源的引用肯定得消耗不少时间。
 
-44个笔记
+　　迄今为止，所有收集器在根节点枚举这一步骤时都是必须暂停用户线程的，因此毫无疑问根节点枚举与之前提及的整理内存碎片一样会面临相似的 “ Stop The World ” 的困扰。
 
-3.4 HotSpot的算法细节实现
+　　可达性分析算法耗时最长的查找引用链的过程已经可以做到与用户线程一起并发，但根节点枚举始终还是必须在一个能保障一致性的快照中才得以进行。
 
- 
+　　” 一致性 ” 的意思是整个枚举期间执行子系统看起来就像被冻结在某个时间点上，不会出现分析过程中，根节点集合的对象引用关系还在不断变化的情况，若这点不能满足的话，分析结果准确性也就无法保证。这是导致垃圾收集过程必须停顿所有用户线程的其中一个重要原因，即使是号称停顿时间可控，或者（几乎）不会发生停顿的 CMS、G1、ZGC 等收集器，枚举根节点时也是必须要停顿的。 
 
-抢先式中断（Preemptive Suspension）和主动式中断（Voluntary Suspension）
+　　目前主流 Java 虚拟机使用的都是准确式垃圾收集，所以当用户线程停顿下来之后，其实并不需要一个不漏地检查完所有执行上下文和全局的引用位置，虚拟机应当是有办法直接得到哪些地方存放着对象引用的。
 
- 
+　　在 HotSpot 的解决方案里，是使用一组称为 OopMap 的数据结构来达到这个目的。一旦类加载动作完成的时候，HotSpot 就会把对象内什么偏移量上是什么类型的数据计算出来，在即时编译过程中，也会在特定的位置记录下栈里和寄存器里哪些位置是引用。这样收集器在扫描时就可以直接得知这些信息了，并不需要真正一个不漏地从方法区等 GC Roots 开始查找。 
 
- 
+### 3.4.2 安全点
 
-抢先式中断不需要线程的执行代码主动去配合，在垃圾收集发生时，系统首先把所有用户线程全部中断，如果发现有用户线程中断的地方不在安全点上，就恢复这条线程执行，让它一会再重新中断，直到跑到安全点上。现在几乎没有虚拟机实现采用抢先式中断来暂停线程响应GC事件。 
+　　在 OopMap 的协助下，HotSpot 可以快速准确地完成 GC Roots 枚举，但一个很现实的问题随之而来：可能导致引用关系变化，或者说导致 OopMap 内容变化的指令非常多，如果为每一条指令都生成对应的 OopMap，那将会需要大量的额外存储空间，这样垃圾收集伴随而来的空间成本就会变得无法忍受的高昂。 
 
- 
+　　HotSpot 也的确没有为每条指令都生成 OopMap，只是在 “ 特定的位置 ” 记录了这些信息，这些位置被称为**安全点**（Safepoint）。有了安全点的设定，也就决定了用户程序执行时并非在代码指令流的任意位置都能够停顿下来开始垃圾收集，而是**强制要求必须执行到达安全点后才能够暂停**。
 
- 
+　　安全点的选定既不能太少以至于让收集器等待时间过长，也不能太过频繁以至于过分增大运行时的内存负荷。
 
-主动式中断的思想是当垃圾收集需要中断线程的时候，不直接对线程操作，仅仅简单地设置一个标志位，各个线程执行过程时会不停地主动去轮询这个标志，一旦发现中断标志为真时就自己在最近的安全点上主动中断挂起。轮询标志的地方和安全点是重合的，另外还要加上所有创建对象和其他需要在Java堆上分配内存的地方，这是为了检查是否即将要发生垃圾收集，避免没有足够内存分配新对象。 
+　　安全点位置的选取基本上是以 “ 是否具有让程序长时间执行的特征 ” 为标准进行选定的，因为每条指令执行的时间都非常短暂，程序不太可能因为指令流长度太长这样的原因而长时间执行，“ 长时间执行 ” 的最明显特征就是指令序列的复用，例如方法调用、循环跳转、异常跳转等都属于指令序列复用，所以只有具有这些功能的指令才会产生安全点。 
 
- 
+　　另外一个需要考虑的问题是，如何在垃圾收集发生时让所有线程（这里其实不包括执行 JNI 调用的线程）都跑到最近的安全点，然后停顿下来。这里有两种方案可供选择：抢先式中断（Preemptive Suspension）和主动式中断（Voluntary Suspension）。
 
- 
+　　抢先式中断不需要线程的执行代码主动去配合，在垃圾收集发生时，系统首先把所有用户线程全部中断，如果发现有用户线程中断的地方不在安全点上，就恢复这条线程执行，让它一会再重新中断，直到跑到安全点上。现在几乎没有虚拟机实现采用抢先式中断来暂停线程响应 GC 事件。 
 
-由于轮询操作在代码中会频繁出现，这要求它必须足够高效。HotSpot使用内存保护陷阱的方式，把轮询操作精简至只有一条汇编指令的程度。
+　　主动式中断的思想是当垃圾收集需要中断线程的时候，不直接对线程操作，仅仅简单地设置一个标志位，各个线程执行过程时会不停地主动去轮询这个标志，一旦发现中断标志为真时就自己在最近的安全点上主动中断挂起。轮询标志的地方和安全点是重合的，另外还要加上所有创建对象和其他需要在 Java 堆上分配内存的地方，这是为了检查是否即将要发生垃圾收集，避免没有足够内存分配新对象。 
 
- 
+　　由于轮询操作在代码中会频繁出现，这要求它必须足够高效。HotSpot 使用内存保护陷阱的方式，把轮询操作精简至只有一条汇编指令的程度。
 
- 
+### 3.4.3 安全区域 
 
-使用安全点的设计
+　　使用安全点的设计似乎已经完美解决如何停顿用户线程，让虚拟机进入垃圾回收状态的问题了，但实际情况却不一定。安全点机制保证了程序执行时，在不太长的时间内就会遇到可进入垃圾收集过程的安全点。
 
- 
+　　而程序不执行就是没有分配处理器时间，而当用户线程处于 Sleep 状态或者 Blocked 状态，这时候线程无法响应虚拟机的中断请求，不能再走到安全的地方去中断挂起自己，虚拟机也显然不可能持续等待线程重新被激活分配处理器时间。对于这种情况，就必须引入安全区域（Safe Region）来解决。 
 
- 
+　　**安全区域是指能够确保在某一段代码片段之中，引用关系不会发生变化，因此，在这个区域中任意地方开始垃圾收集都是安全的**。
 
-解决如何停顿用户线程
+　　当用户线程执行到安全区域里面的代码时，首先会标识自己已经进入了安全区域，那样当这段时间里虚拟机要发起垃圾收集时就不必去管这些已声明自己在安全区域内的线程了。当线程要离开安全区域时，它要检查虚拟机是否已经完成了根节点枚举（或者垃圾收集过程中其他需要暂停用户线程的阶段），如果完成了，那线程就当作没事发生过，继续执行；否则它就必须一直等待，直到收到可以离开安全区域的信号为止。 
 
- 
+### 3.4.4 记忆集与卡表
 
- 
+　　为解决对象跨代引用所带来的问题，垃圾收集器在新生代中建立了名为记忆集（Remembered Set）的数据结构，用以避免把整个老年代加进  GC Roots 扫描范围。
 
-，让虚拟机进入垃圾回收状态的问题了
+　　所有涉及部分区域收集（Partial GC）行为的垃圾收集器，典型的如 G1、ZGC 和 Shenandoah 收集器，都会面临相同的问题。
 
- 
+　　**记忆集是一种用于记录从非收集区域指向收集区域的指针集合的抽象数据结构**。
 
- 
+　　如果不考虑效率和成本的话，最简单的实现可以用非收集区域中所有含跨代引用的对象数组来实现这个数据结构。
 
-安全点机制保证了程序执行时，在不太长的时间内就会遇到可进入垃圾收集过程的安全点。
+　　这种记录全部含跨代引用对象的实现方案，无论是空间占用还是维护成本都相当高昂。
 
- 
+　　而在垃圾收集的场景中，收集器只需要通过记忆集判断出某一块非收集区域是否存在有指向了收集区域的指针就可以了，并不需要了解这些跨代指针的全部细节。
 
- 
+　　列举一些可供选择的记录精度：
 
-程序不执行就是没有分配处理器时间
+* 字长精度：每个记录精确到一个机器字长（就是处理器的寻址位数，如常见的 32 位或 64 位，这个精度决定了机器访问物理内存地址的指针长度），该字包含跨代指针。
 
- 
+* 对象精度：每个记录精确到一个对象，该对象里有字段含有跨代指针。
 
- 
+* 卡精度：每个记录精确到一块内存区域，该区域内有对象含有跨代指针。
 
-线程无法响应虚拟机的中断请求，不能再走到安全的地方去中断挂起自己，虚拟机也显然不可能持续等待线程重新被激活分配处理器时间。对于这种情况，就必须引入安全区域（Safe Region）来解决。 
+　　" 卡精度 ” 所指的是用一种称为 “ 卡表 ”（Card Table）的方式去实现记忆集，这也是目前最常用的一种记忆集实现形式，一些资料中甚至直接把它和记忆集混为一谈。
 
- 
+　　记忆集其实是一种 “ 抽象 ” 的数据结构，抽象的意思是只定义了记忆集的行为意图，并没有定义其行为的具体实现。卡表就是记忆集的一种具体实现，它定义了记忆集的记录精度、与堆内存的映射关系等。
 
- 
+　　卡表最简单的形式可以只是一个字节数组，而数组中的每一个元素都对应着其标识的内存区域中一块特定大小的内存块，这个内存块被称作 “ 卡页 ”（Card Page）。一般来说，卡页大小都是以 2 的 N 次幂的字节数。
 
-安全区域是指能够确保在某一段代码片段之中，引用关系不会发生变化，因此，在这个区域中任意地方开始垃圾收集都是安全的
+　　HotSpot 中使用的卡页是 2 的 9 次幂，即 512 字节。
 
- 
+　　一个卡页的内存中通常包含不止一个对象，只要卡页内有一个（或更多）对象的字段存在着跨代指针，那就将对应卡表的数组元素的值标识为1，称为这个元素变脏（Dirty），没有则标识为 0。在垃圾收集发生时，只要筛选出卡表中变脏的元素，就能轻易得出哪些卡页内存块中包含跨代指针，把它们加入 GC Roots 中一并扫描。
 
- 
+### 3.4.5 写屏障
 
-当用户线程执行到安全区域里面的代码时，首先会标识自己已经进入了安全区域，那样当这段时间里虚拟机要发起垃圾收集时就不必去管这些已声明自己在安全区域内的线程了。当线程要离开安全区域时，它要检查虚拟机是否已经完成了根节点枚举（或者垃圾收集过程中其他需要暂停用户线程的阶段），如果完成了，那线程就当作没事发生过，继续执行；否则它就必须一直等待，直到收到可以离开安全区域的信号为止。 
+　　卡表元素何时变脏：有其他分代区域中对象引用了本区域对象时，其对应的卡表元素就应该变脏，变脏时间点原则上应该发生在引用类型字段赋值的那一刻。
 
- 
+　　在 HotSpot 虚拟机里是通过写屏障（Write Barrier）技术维护卡表状态的。
 
- 
+　　写屏障可以看作在虚拟机层面对 “ 引用类型字段赋值 ” 这个动作的 AOP 切面，在引用对象赋值时会产生一个环形（Around）通知，供程序执行额外的动作，也就是说赋值的前后都在写屏障的覆盖范畴内。在赋值前的部分的写屏障叫作写前屏障（Pre-Write Barrier），在赋值后的则叫作写后屏障（Post-Write Barrier）。
 
-提到了为解决对象跨代引用所带来的问题，垃圾收集器在新生代中建立了名为记忆集（Remembered Set）的数据结构，用以避免把整个老年代加进GC Roots扫描范围。
+　　HotSpot 虚拟机的许多收集器中都有使用到写屏障，但直至 G1 收集器出现之前，其他收集器都只用到了写后屏障。
 
- 
+　　应用写屏障后，虚拟机就会为所有赋值操作生成相应的指令，一旦收集器在写屏障中增加了更新卡表操作，无论更新的是不是老年代对新生代对象的引用，每次只要对引用进行更新，就会产生额外的开销，不过这个开销与 Minor GC 描整个老年代的代价相比还是低得多的。
 
- 
+　　除了写屏障的开销外，卡表在高并发场景下还面临着 “ 伪共享 ”（False Sharing）问题。为了避免伪共享问题，一种简单的解决方案是不采用无条件的写屏障，而是先检查卡表标记，只有当该卡表元素未被标记过时才将其标记为变脏。
 
-所有涉及部分区域收集（Partial GC）行为的垃圾收集器，典型的如G1、ZGC和Shenandoah收集器，都会面临相同的问题
+　　在 JDK 7 之后，HotSpot 虚拟机增加了一个新的参数 -XX：+UseCondCardMark，用来决定是否开启卡表更新的条件判断。开启会增加一次额外判断的开销，但能够避免伪共享问题，两者各有性能损耗，是否打开要根据应用实际运行情况来进行测试权衡。
 
- 
+### 3.4.6 并发的可达性分析
 
- 
+　　当前主流编程语言的垃圾收集器基本上都是依靠可达性分析算法来判定对象是否存活的，可达性分析算法理论上要求全过程都基于一个能保障一致性的快照中才能够进行分析，这意味着必须全程冻结用户线程的运行。
 
-记忆集是一种用于记录从非收集区域指向收集区域的指针集合的抽象数据结构
+　　在根节点枚举这个步骤中，由于 GC Roots 相比起整个 Java 堆中全部的对象毕竟还算是极少数，且在各种优化技巧（如 OopMap ）的加持下，它带来的停顿已经是非常短暂且相对固定（不随堆容量而增长）的了。
 
- 
+　　可从 GC Roots 再继续往下遍历对象图，这一步骤的停顿时间就必定会与 Java 堆容量直接成正比例关系了：堆越大，存储的对象越多，对象图结构越复杂，要标记更多对象而产生的停顿时间自然就更长，这听起来是理所当然的事情。
 
- 
+　　要知道包含 “ 标记 ” 阶段是所有追踪式垃圾收集算法的共同特征，如果这个阶段会随着堆变大而等比例增加停顿时间，其影响就会波及几乎所有的垃圾收集器，如果能够削减这部分停顿时间的话，那收益也将会是系统性的。
 
-如果我们不考虑效率和成本的话，最简单的实现可以用非收集区域中所有含跨代引用的对象数组来实现这个
+　　为什么必须在一个能保障一致性的快照上才能进行对象图的遍历？引入三色标记作为工具来辅助推导，把遍历对象图过程中遇到的对象，按照 “ 是否访问过 ” 这个条件标记成一下三种颜色：
 
- 
+* 白色：表示对象尚未被垃圾收集器访问过。
 
- 
+  显然在可达性分析刚刚开始的阶段，所有的对象都是白色的，若在分析结束的阶段，仍然是白色的对象，即代表不可达。
 
-数据结构
+* 黑色：表示对象已经被垃圾收集器访问过，且这个对象的所有引用都已经扫描过。
 
- 
+  黑色的对象代表已经扫描过，它是安全存活的，如果有其他对象引用指向了黑色对象，无须重新扫描一遍。黑色对象不可能直接（不经过灰色对象）指向某个白色对象。
 
- 
+* 灰色：表示对象已经被垃圾收集器访问过，但这个对象上至少存在一个引用还没有被扫描过。
 
-这种记录全部含跨代引用对象的实现方案，无论是空间占用还是维护成本都相当高昂
+　　如果用户线程与收集器是并发工作，收集器在对象图上标记颜色，同时用户线程在修改引用关系——即修改对象图的结构，这样可能出现两种后果。一种是把原本消亡的对象错误标记为存活，这不是好事，但其实是可以容忍的，只不过产生了一点逃过本次收集的浮动垃圾而已，下次收集清理掉就好。另一种是把原本存活的对象错误标记为已消亡，这就是非常致命的后果了，程序肯定会因此发生错误。
 
- 
+　　致命错误具体按是如何产生的，如下图所示：
 
- 
+![](image/并发出现对象消失问题的示意.jpeg)
 
-垃圾收集的场景中，收集器只需要通过记忆集判断出某一块非收集区域是否存在有指向了收集区域的指针就可以了，并不需要了解这些跨代指针的全部细节
+　　当且仅当以下两个条件同时满足时，会产生 “ 对象消失 ” 的问题，即原本应该是黑色的对象被误标为白色：
 
- 
+* 赋值器插入了一条或多条从黑色对象到白色对象的新引用；
 
- 
+* 赋值器删除了全部从灰色对象到该白色对象的直接或间接引用。
 
-可供选择
+　　要解决并发扫描时的对象消失问题，只需破坏这两个条件的任意一个即可。由此分别产生了两种解决方案：增量更新（Incremental Update）和原始快照（Snapshot At The Beginning，SATB）。
 
- 
+　　增量更新要破坏的是第一个条件，当黑色对象插入新的指向白色对象的引用关系时，就将这个新插入的引用记录下来，等并发扫描结束之后，再将这些记录过的引用关系中的黑色对象为根，重新扫描一次。可以理解为，黑色对象一旦新插入了指向白色对象的引用之后，它就变回灰色对象了。
 
- 
+　　原始快照要破坏的是第二个条件，当灰色对象要删除指向白色对象的引用关系时，就将这个要删除的引用记录下来，在并发扫描结束之后，再将这些记录过的引用关系中的灰色对象为根，重新扫描一次。这也可以简化理解为，无论引用关系删除与否，都会按照刚刚开始扫描那一刻的对象图快照来进行搜索。
 
-记录精度：
+　　以上无论是对引用关系记录的插入还是删除，虚拟机的记录操作都是通过写屏障实现的。
 
- 
-
- 
-
-字长精度：每个记录精确到一个机器字长（就是处理器的寻址位数，如常见的32位或64位，这个精度决定了机器访问物理内存地址的指针长度），该字包含跨代指针。
-
- 
-
- 
-
-对象精度：每个记录精确到一个对象，该对象里有字段含有跨代指针。
-
- 
-
- 
-
-卡精度：每个记录精确到一块内存区域，该区域内有对象含有跨代指针。
-
- 
-
- 
-
-卡精度”所指的是用一种称为“卡表”（Card Table）的方式去实现记忆集[插图]，这也是目前最常用的一种记忆集实现形式，一些资料中甚至直接把它和记忆集混为一谈。
-
- 
-
- 
-
-记忆集其实是一种“抽象”的数据结构，抽象的意思是只定义了记忆集的行为意图，并没有定义其行为的具体实现。卡表就是记忆集的一种具体
-
- 
-
- 
-
-实现，它定义了记忆集的记录精度、与堆内存的映射关系等。
-
- 
-
- 
-
-每一个元素都对应着其标识的内存区域中一块特定大小的内存块，这个内存块被称作“卡页”（Card Page）。一般来说，卡页大小都是以2的N次幂的字节数，
-
- 
-
- 
-
-HotSpot中使用的卡页是2的9次幂，即512字节
-
- 
-
- 
-
-一个卡页的内存中通常包含不止一个对象，只要卡页内有一个（或更多）对象的字段存在着跨代指针，那就将对应卡表的数组元素的值标识为1，称为这个元素变脏（Dirty），没有则标识为0。在垃圾收集发生时，只要筛选出卡表中变脏的元素，就能轻易得出哪些卡页内存块中包含跨代指针，把它们加入GC Roots中一并扫描。
-
- 
-
- 
-
-卡表元素何时变脏
-
- 
-
- 
-
-有其他分代区域中对象引用了本区域对象时，其对应的卡表元素就应该变脏，变脏时间点原则上应该发生在引用类型字段赋值的那一刻。
-
- 
-
- 
-
-在HotSpot虚拟机里是通过写屏障（Write Barrier）技术维护卡表状态的。
-
- 
-
- 
-
-写屏障可以看作在虚拟机层面对“引用类型字段赋值”这个动作的AOP切面[插图]，在引用对象赋值时会产生一个环形（Around）通知，供程序执行额外的动作，也就是说赋值的前后都在写屏障的覆盖范畴内
-
- 
-
- 
-
-在赋值前的部分的写屏障叫作写前屏障（Pre-Write Barrier），在赋值后的则叫作写后屏障（Post-Write Barrier）
-
- 
-
- 
-
-HotSpot虚拟机的许多收集器中都有使用到写屏障，但直至G1收集器出现之前，其他收集器都只用到了写后屏障
-
- 
-
- 
-
-应用写屏障后，虚拟机就会为所有赋值操作生成相应的指令，一旦收集器在写屏障中增加了更新卡表操作，无论更新的是不是老年代对新生代对象的引用，每次只要对引用进行更新，就会产生额外的开销，不过这个开销与Minor GC时扫描整个老年代的代价相比还是低得多的。
-
- 
-
- 
-
-除了写屏障的开销外，卡表在高并发场景下还面临着“伪共享”（False Sharing）问题
-
- 
-
- 
-
-为了避免伪共享问题，一种简单的解决方案是不采用无条件的写屏障，而是先检查卡表标记，只有当该卡表元素未被标记过时才将其标记为变脏
-
- 
-
- 
-
-在JDK 7之后，HotSpot虚拟机增加了一个新的参数-XX：+UseCondCardMark
-
- 
-
- 
-
-用来决定是否
-
- 
-
- 
-
-开启卡表更新的条件判断。
-
- 
-
- 
-
-开启会增加一次额外判断的开销，但能够避免伪共享问题，两者各有性能损耗，是否打开要根据应用实际运行情况来进行测试权衡。
-
- 
-
- 
-
-当前主流编程语言的垃圾收集器基本上都是依靠可达性分析算法来判定对象是否存活的
-
-微信读书
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-53个笔记
-
-3.4 HotSpot的算法细节实现
-
- 
-
-可达性分析算法理论上要求全过程都基于一个能保障一致性的快照中才能够进行分析，这意味着必须全程冻结用户线程的运行
-
- 
-
- 
-
-在根节点枚举（见3.4.1节）这个步骤中，由于GC Roots相比起整个Java堆中全部的对象毕竟还算是极少数，且在各种优化技巧（如OopMap）
-
- 
-
- 
-
-的加持下，它带来的停顿已经是非常短暂且相对固定（不随堆容量而增长）的了
-
- 
-
- 
-
-可从GC Roots再继续往下遍历对象图，这一步骤的停顿时间就必定会与Java堆容量直接成正比例关系了：堆越大，存储的对象越多，对象图结构越复杂，要标记更多对象而产生的停顿时间自然就更长，这听起来是理所当然的事情。
-
- 
-
- 
-
-要知道包含“标记”阶段是所有追踪式垃圾收集算法的共同特征
-
- 
-
- 
-
-如果这个阶段会随着堆变大而等比例增加停顿时间，其影响就会波及几乎所有的垃圾收集器
-
- 
-
- 
-
-如果能够削减这部分停顿时间的话，那收益也将会是系统性的。
-
- 
-
- 
-
-为什么必须在一个能保障
-
- 
-
- 
-
-一致性的快照上才能进行对象图的遍历
-
- 
-
- 
-
-三色标记
-
- 
-
- 
-
-白色：表示对象尚未被垃圾收集器访问过
-
- 
-
- 
-
-显然在可达性分析刚刚开始的阶段，所有的对象都是白色的，若在分析结束的阶段，仍然是白色的对象，即代表不可达。
-
- 
-
- 
-
-黑色：表示对象已经被垃圾收集器访问过，且这个对象的所有引用都已经扫描过
-
- 
-
- 
-
-黑色的对象代表已经扫描过，它是安全存活的，如果有其他对象引用指向了黑色对象，无须重新扫描一遍。黑色对象不可能直接（不经过灰色对象）指向某个白色对象
-
- 
-
- 
-
-灰色：表示对象已经被垃圾收集器访问过，但这个对象上至少存在一个引用还没有被扫描过
-
- 
-
- 
-
-果用户线程与收集器是并发工作
-
- 
-
- 
-
-收集器在对象图上标记颜色，同时用户线程在修改引用关系——即修改对象图的结构，这样可能出现两种后果。一种是把原本消亡的对象错误标记为存活，这不是好事，但其实是可以容忍的，只不过产生了一点逃过本次收集的浮动垃圾而已，下次收集清理掉就好。另一种是把原本存活的对象错误标记为已消亡，这就是非常致命的后果
-
- 
-
- 
-
-了，程序肯定会因此发生错误
-
- 
-
- 
-
-当且仅当以下两个条件同时满足时，会产生“对象消失”的问题，即原
-
- 
-
- 
-
-本应该是黑色的对象被误标为白色：
-
- 
-
- 
-
-赋值器插入了一条或多条从黑色对象到白色对象的新引用；
-
- 
-
- 
-
-赋值器删除了全部从灰色对象到该白色对象的直接或间接引用。
-
- 
-
- 
-
-要解决并发扫描时的对象消失问题，只需破坏这两个条件的任意一个即可
-
- 
-
- 
-
-此分别产生了两种解决方案：增量更新（Incremental Update）和原始快照（Snapshot At The Beginning，SATB）。
-
- 
-
- 
-
-增量更新要破坏的是第一个条件，当黑色对象插入新的指向白色对象的引用关系时，就将这个新插入的引用记录下来，等并发扫描结束之后，再将这些记录过的引用关系中的黑色对象为根，重新扫描一次
-
- 
-
- 
-
-黑色对象一旦新插入了指向白色对象的引
-
- 
-
- 
-
-用之后，它就变回灰色对象了。
-
- 
-
- 
-
-原始快照要破坏的是第二个条件，当灰色对象要删除指向白色对象的引用关系时，就将这个要删除的引用记录下来，在并发扫描结束之后，再将这些记录过的引用关系中的灰色对象为根，重新扫描一次。这也可以简化理解为，无论引用关系删除与否，都会按照刚刚开始扫描那一刻的对象图快照来进行搜索。
-
- 
-
- 
-
-以上无论是对引用关系记录的插入还是删除，虚拟机的记录操作都是通过写屏障实现的
-
- 
-
- 
-
-在HotSpot虚拟机中，增量更新和原始快照这两种解决方案都有实际应用，譬如，CMS是基于增量更新来做并发标记的，G1、Shenandoah则是用原始快照来实现。
-
-3.5 经典垃圾收集器
-
- 
-
-不同的厂商、不同版本的虚拟机所包含的垃圾收集器都可能会有很大差别，不同的虚拟机一般也都会提供各种参数供用户根据自己的应用特点和要求组合出各个内存分代所使用的收集器。
-
- 
-
- 
-
-七种作用于不同分代的收集器，如果两个收集器之间存在连线，就说明它们可以搭配使用
-
- 
-
- 
-
-图中收集器所处的区域，则表示它是属于新生代收集器抑或是老年代收集器
-
- 
-
- 
-
-Serial收集器是最基础、历史最悠
-
- 
-
- 
-
-久的收集器，曾经（在JDK 1.3.1之前）是HotSpot虚拟机新生代收集器的唯一选择
-
- 
-
- 
-
-收集器是一个单线程工作的收集器
-
- 
-
- 
-
-单线程”的意义并不仅仅是说明它只会使用一个处理器或一条收集线程去完成垃圾收集工作，更重要的是强调在它进行垃圾收集时，必须暂停其他所有工作线程，直到它收集结束。
-
- 
-
- 
-
-这项工作是由虚拟机在后台自动发起和自动完成的，在用户不可知、不可控的情况下把用户的正常工作的线程全部停掉，这对很多应用来说都是不能接受的
-
- 
-
- 
-
-依然是HotSpot虚拟机运行在客户端模
-
- 
-
- 
-
-式下的默认新生代收集器，有着优于其他收集器的地方，那就是简单而高效（与其他收集器的单线程相比），对于内存资源受限的环境，它是所有收集器里额外内存消耗（Memory Footprint）[插图]最小的
-
- 
-
- 
-
-对于单核处理器或处理器核心数较少的环境来说，Serial收集器由于没有线程交互的开销，专心做垃圾收集自然可以获得最高的单线程收集效率。在用户桌面的应用场景以及近年来流行的部分微服务应用中，分配给虚拟机管理的内存一般来说并不会特别大，收集几十兆甚至一两百兆的新生代（仅仅是指新生代使用的内存，桌面应用甚少超过这个容量），垃圾收集的停顿时间完全可以控制在十几、几十毫秒，最多一百多毫秒以内，只要不是频繁发生收集，这点停顿时间对许多
-
- 
-
- 
-
-用户来说是完全可以接受的。所以，Serial收集器对于运行在客户端模式下的虚拟机来说是一个很好的选择。
-
- 
-
- 
-
-ParNew收集器实质上是Serial收集器的多线程并行版本，除了同时使用多条线程进行垃圾收集之外，其余的行为包括Serial收集器可用的所有控制参数（例如：-XX：SurvivorRatio、-XX：PretenureSizeThreshold、-XX：HandlePromotionFailure等）、收集算法、Stop The World、对象分配规则、回收策略等都与Serial收集器完全一致，在实现上这两种收集器也共用了相当多的代码
-
- 
-
- 
-
-ParNew收集器除了支持多线程并行收集之外，其他与Serial收集器相比并没有太多创新之处
-
- 
-
- 
-
-但它却是不少运行在服务端模式下的HotSpot虚拟机，尤其是JDK 7之前的遗留系统中首选的新生代收集器，其中有一个与功能、性能无关但其实很重要的原因是：除了Serial收集器外，目前只有它能与CMS收集器配合工作。
-
- 
-
- 
-
-在JDK 5发布时，HotSpot推出了一款在强交互应用中几乎可称为具有划时代意义的垃圾收集器——CMS收集器。这款收集器是HotSpot虚拟机中第一款真正意义上支持并发的垃圾收集
-
- 
-
- 
-
-器，它首次实现了让垃圾收集线程与用户线程（基本上）同时工作。
-
- 
-
- 
-
-CMS作为老年代的收集器，却无法与JDK 1.4.0中已经存在的新生代收集器Parallel Scavenge配合工作[插图]，所以在JDK 5中使用CMS来收集老年代的时候，新生代只能选择ParNew或者Serial收集器中的一个。ParNew收集器是激活CMS后（使用-XX：+UseConcMarkSweepGC选项）的默认新生代收集器，也可以使用-XX：+/-UseParNewGC选项来强制指定或者禁用它。
-
- 
-
- 
-
-。G1是一个面向全堆
-
- 
-
- 
-
-的收集器，不再需要其他新生代收集器的配合工作
-
- 
-
- 
-
-所以自JDK 9开始，ParNew加CMS收集器的组合就不再是官方推荐的服务端模式下的收集器解决方案了。
-
- 
-
- 
-
-希望它能完全被G1所取代，甚至还取消了ParNew加Serial Old以及Serial加CMS这两组收集器组合的支持（其实原本也很少人这样使用），并直接取消了-XX：+UseParNewGC参数，这意味着ParNew和CMS从此只能互相搭配使用，再也没有其他收集器能够和它们配合了
-
- 
-
- 
-
-从此以后，ParNew合并入CMS，成为它专门处理新生代的组成部分。ParNew可以说是HotSpot虚拟机中第一款退出历史舞台的垃圾收集器
-
-微信读书
+　　在 HotSpot 虚拟机中，增量更新和原始快照这两种解决方案都有实际应用，譬如，CMS 是基于增量更新来做并发标记的，G1、Shenandoah 则是用原始快照来实现。
 
 ## 3.5 经典垃圾收集器
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
+　　不同的厂商、不同版本的虚拟机所包含的垃圾收集器都可能会有很大差别，不同的虚拟机一般也都会提供各种参数供用户根据自己的应用特点和要求组合出各个内存分代所使用的收集器。
 
-周志明
+ 　　HotSpot 虚拟机的垃圾收集器：
 
-53个笔记
+![](image/HotSpot虚拟机的垃圾收集器.jpeg)
 
-3.5 经典垃圾收集器
+　　上图展示了七种作用于不同分代的收集器，如果两个收集器之间存在连线，就说明它们可以搭配使用，图中收集器所处的区域，则表示它是属于新生代收集器抑或是老年代收集器。
 
- 
+### 3.5.1 Serial 收集器
 
-ParNew收集器在单核心处理器的
+　　Serial 收集器是最基础、历史最悠久的收集器，曾经（在 JDK 1.3.1 之前）是 HotSpot 虚拟机新生代收集器的唯一选择。
 
- 
+　　这个收集器是一个单线程工作的收集器，这个 " 单线程 ” 的意义并不仅仅是说明它只会使用一个处理器或一条收集线程去完成垃圾收集工作，更重要的是强调在它进行垃圾收集时，必须暂停其他所有工作线程，直到它收集结束。暂停其他所有工作线程这项工作是由虚拟机在后台自动发起和自动完成的，在用户不可知、不可控的情况下把用户的正常工作的线程全部停掉，这对很多应用来说都是不能接受的。
 
- 
+　　Serial / Serial Old 收集器运行示意图：
 
-环境中绝对不会有比Serial收集器更好的效果，甚至由于存在线程交互的开销，该收集器在通过超线程（Hyper-Threading）技术实现的伪双核处理器环境中都不能百分之百保证超越Serial收集器
+![](image/Serial或SerialOld收集器运行示意图.jpeg)
 
- 
+　　Serial 收集器依然是 HotSpot 虚拟机运行在客户端模式下的默认新生代收集器，有着优于其他收集器的地方，那就是**简单而高效**（与其他收集器的单线程相比），对于内存资源受限的环境，它是所有收集器里额外内存消耗（Memory Footprint）最小的。
 
- 
+　　对于单核处理器或处理器核心数较少的环境来说，Serial 收集器由于没有线程交互的开销，专心做垃圾收集自然可以获得最高的单线程收集效率。在用户桌面的应用场景以及近年来流行的部分微服务应用中，分配给虚拟机管理的内存一般来说并不会特别大，收集几十兆甚至一两百兆的新生代（仅仅是指新生代使用的内存，桌面应用甚少超过这个容量），垃圾收集的停顿时间完全可以控制在十几、几十毫秒，最多一百多毫秒以内，只要不是频繁发生收集，这点停顿时间对许多用户来说是完全可以接受的。所以，Serial 收集器对于运行在客户端模式下的虚拟机来说是一个很好的选择。
 
-随着可以被使用的处理器核心数量的增加，ParNew对于垃圾收集时系统资源的高效利用还是很有好处的。它默认开启的收集线程数与处理器核心数量相同，在处理器核心非常多（譬如32个，现在CPU都是多核加超线程设计，服务器达到或超过32个逻辑核心的情况非常普遍）的环境中，可以使用-XX：ParallelGCThreads参数来限制垃圾收集的线程数。
+### 3.5.2 ParNew 收集器 
 
- 
+　　ParNew 收集器实质上是 Serial 收集器的多线程并行版本，除了同时使用多条线程进行垃圾收集之外，其余的行为包括 Serial 收集器可用的所有控制参数（例如：-XX：SurvivorRatio、-XX：PretenureSizeThreshold、-XX：HandlePromotionFailure 等）、收集算法、Stop The World、对象分配规则、回收策略等都与 Serial 收集器完全一致，在实现上这两种收集器也共用了相当多的代码。
 
- 
+　　ParNew 收集器的工作过程如下图所示：
 
-并行和并发都是并发编程中的专业名词，在谈论垃圾收集器的上下文语境中，它们可以理解为：
+![](image/ParNew或SerialOld收集器运行示意图.jpeg)
 
- 
+　　ParNew 收集器除了支持多线程并行收集之外，其他与 Serial 收集器相比并没有太多创新之处，但它却是不少运行在服务端模式下的 HotSpot 虚拟机，尤其是 JDK 7 之前的遗留系统中首选的新生代收集器，其中有一个与功能、性能无关但其实很重要的原因是：除了 Serial 收集器外，目前只有它能与 CMS 收集器配合工作。
 
- 
+　　在 JDK 5 发布时，HotSpot 推出了一款在强交互应用中几乎可称为具有划时代意义的垃圾收集器 —— CMS 收集器。这款收集器是 HotSpot 虚拟机中第一款真正意义上支持并发的垃圾收集器，它首次实现了让垃圾收集线程与用户线程（基本上）同时工作。
 
-·并行（Parallel）：并行描述的是多条垃圾收集器线程之间的关系，说明同一时间有多条这样的线程在协同工作，通常默认此时用户线程是处于等待状态。·并发（Concurrent）：并发描述的是垃圾收集器线程与用户线程之间的关系，说明同一时间垃圾收集器线程与用户线程都在运行。由于用户线程并未被冻结，所以程序仍然能响应服务请求，但由于垃圾收集器线程占用了一部分系统资源，此时应用程序的处理的吞吐量将受到一定影响。
+　　但是，CMS 作为老年代的收集器，却无法与 JDK 1.4.0 中已经存在的新生代收集器 Parallel Scavenge 配合工作，所以在 JDK 5 中使用 CMS 来收集老年代的时候，新生代只能选择 ParNew 或者 Serial 收集器中的一个。ParNew 收集器是激活 CMS 后（使用 -XX：+UseConcMarkSweepGC 选项）的默认新生代收集器，也可以使用 -XX：+/-UseParNewGC 选项来强制指定或者禁用它。
 
- 
+　　随着垃圾收集器技术的不断改进，更先进的 G1 收集器作为 CMS 继承者和替代者登场。G1 是一个面向全堆的收集器，不再需要其他新生代收集器的配合工作。所以自 JDK 9 开始，ParNew 加 CMS 收集器的组合就不再是官方推荐的服务端模式下的收集器解决方案了。希望它能完全被 G1 所取代，甚至还取消了 ParNew 加 Serial Old 以及 Serial 加 CMS 这两组收集器组合的支持（其实原本也很少人这样使用），并直接取消了 -XX：+UseParNewGC 参数，这意味着 ParNew 和 CMS 从此只能互相搭配使用，再也没有其他收集器能够和它们配合了。从此以后，ParNew 合并入 CMS，成为它专门处理新生代的组成部分。ParNew 可以说是 HotSpo t虚拟机中第一款退出历史舞台的垃圾收集器。
 
- 
+　　ParNew 收集器在单核心处理器的环境中绝对不会有比 Serial 收集器更好的效果，甚至由于存在线程交互的开销，该收集器在通过超线程（Hyper-Threading）技术实现的伪双核处理器环境中都不能百分之百保证超越 Serial 收集器。
+
+　　当然，随着可以被使用的处理器核心数量的增加，ParNew 对于垃圾收集时系统资源的高效利用还是很有好处的。它默认开启的收集线程数与处理器核心数量相同，在处理器核心非常多（譬如 32 个，现在 CPU 都是多核加超线程设计，服务器达到或超过 32 个逻辑核心的情况非常普遍）的环境中，可以使用 -XX：ParallelGCThreads 参数来限制垃圾收集的线程数。
+
+　　并行和并发都是并发编程中的专业名词，在谈论垃圾收集器的上下文语境中，它们可以理解为：
+
+* 并行（Parallel）：并行描述的是多条垃圾收集器线程之间的关系，说明同一时间有多条这样的线程在协同工作，通常默认此时用户线程是处于等待状态。
+* 并发（Concurrent）：并发描述的是垃圾收集器线程与用户线程之间的关系，说明同一时间垃圾收集器线程与用户线程都在运行。由于用户线程并未被冻结，所以程序仍然能响应服务请求，但由于垃圾收集器线程占用了一部分系统资源，此时应用程序的处理的吞吐量将受到一定影响。
+
+### 3.5.3 Parallel Scavenge 收集器 
 
 Parallel Scavenge收集器也是一款新生代收集器，它同样是基于标记-复制算法实现的收集器，也是能够并行收集的多线程收集器
 
