1.虚拟第3章，2.变更开源库位置

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -45,9 +45,10 @@
 
 ### 影视
 
-1. 《爱情公寓》 2020年2月
-2. 《两只老虎》 2020年2月
-3. 《红星救援》2020年2月
+1. 《爱情公寓》 2020 年 2 月
+2. 《两只老虎》 2020 年 2 月
+3. 《红星救援》2020 年 2 月
+4. 《狐妖小红娘》-尾生篇 2020 年 3 月
 
 
 
@@ -74,13 +75,10 @@
 2. jar 与 aar 的区别
 3. 《深入理解 Java 虚拟机》第 10-13  章
 4. RabbitMQ 知识整理
-5. Replugin 插件化
-6. fragment
-7. 锻炼 天
 
 
 
-#### 盘点需要做的事情（详细）
+## 盘点需要做的事情（详细）
 
 1. Android
    * ContentProvider
@@ -96,9 +94,9 @@
    * RxJava
    * XWalkView
    * LRUCache
-   * **RabbitMQ - 进行中**
    * RePlugin - 插件化
    * 热修复
+   * RabbitMQ - 已完成
 3. 网络
    * 计算机网络知识基础
    * HTTPS
