--- a/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
+++ b/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
@@ -488,1129 +488,223 @@
 
 ### 3.5.7 Garbage First 收集器
 
- 
+　　Garbage First（简称 G1）收集器开创了收集器面向局部收集的设计思路和基于 Region 的内存布局形式。
 
-Garbage First（简称G1）收集器
+　　G1 是一款主要面向服务端应用的垃圾收集器。JDK 9 发布之日，G1 宣告取代 Parallel Scavenge 加 Parallel Old 组合，成为服务端模式下的默认垃圾收集器。
 
- 
+　　作为 CMS 收集器的替代者和继承人，设计者们希望做出一款能够建立起 “ 停顿时间模型 ”（Pause Prediction Model）的收集器，停顿时间模型的意思是能够支持指定在一个长度为 M 毫秒的时间片段内，消耗在垃圾收集上的时间大概率不超过 N 毫秒这样的目标，这几乎已经是实时 Java（RTSJ）的中软实时垃圾收集器特征了。
 
- 
+　　G1 可以面向堆内存任何部分来组成回收集（Collection Set，一般简称CSet）进行回收，衡量标准不再是它属于哪个分代，而是哪块内存中存放的垃圾数量最多，回收收益最大，这就是 G1 收集器的 Mixed GC 模式。
 
-开创了收集器面向局部收集的设计思路和基于Region的内存布局形式。
+　　G1 不再坚持固定大小以及固定数量的分代区域划分，而是把连续的 Java 堆划分为多个大小相等的独立区域（Region），每一个 Region 都可以根据需要，扮演新生代的 Eden 空间、Survivor 空间，或者老年代空间。
 
- 
+　　收集器能够对扮演不同角色的 Region 采用不同的策略去处理，这样无论是新创建的对象还是已经存活了一段时间、熬过多次收集的旧对象都能获取很好的收集效果。
 
- 
+　　Region 中还有一类特殊的 Humongous 区域，专门用来存储大对象。G1 认为只要大小超过了一个 Region 容量一半的对象即可判定为大对象。
 
-G1是一款主要面向服务端应用的垃圾收集器
+　　每个 Region 的大小可以通过参数 -XX：G1HeapRegionSize 设定，取值范围为 1MB～32MB，且应为 2 的 N 次幂。
 
- 
+　　而对于那些超过了整个 Region 容量的超级大对象，将会被存放在 N 个连续的 Humongous Region 之中，G1 的大多数行为都把 Humongous Region 作为老年代的一部分来进行看待，如下图所示：
 
- 
+![](image/G1收集器Region分区示意图.jpeg)
 
-JDK 9发布之日，G1宣告取代Parallel Scavenge加Parallel Old组合，成为服务端模式下的默认垃圾收集器
+　　虽然 G1 仍然保留新生代和老年代的概念，但新生代和老年代不再是固定的了，它们都是一系列区域（不需要连续）的动态集合。
 
- 
+　　G1 收集器之所以能建立可预测的停顿时间模型，是因为它将 Regin 作为单次回收的最小单元，即每次收集到的内存空间都是 Regin 大小的整数倍，这样可以有计划地避免在整个 Java 堆中进行全区域的垃圾收集。更具体的处理思路是让 G1 收集器去跟踪各个 Region 里面的垃圾堆积的 “ 价值 ” 大小，价值即回收所获得的空间大小以及回收所需时间的经验值，然后在后台维护一个优先级列表，每次根据用户设定允许的收集停顿时间（使用参数 -XX：MaxGCPauseMillis 指定，默认值是 200 毫秒），优先处理回收价值收益最大的那些 Region 。
 
- 
+　　这种使用 Region 划分内存空间，以及具有优先级的区域回收方式，保证了 G1 收集器在有限的时间内获取尽可能高的收集效率。
 
-作为CMS收集器的替代者和继承人，设计者们希望做出一款能够建立起“停顿时间模型”（Pause Prediction Model）的收集器
+　　将 Java 堆分成多个独立 Region 后，Region 里面存在的跨 Region 引用对象如何解决？使用记忆集避免全堆作为 GC Roots 扫描，但在 G1 收集器上记忆集的应用其实要复杂很多，它的每个 Region 都维护有自己的记忆集，这些记忆集会记录下别的 Region 指向自己的指针，并标记这些指针分别在哪些卡页的范围之内。
 
- 
+　　G1 的记忆集在存储结构的本质上是一种哈希表，Key 是别的 Region 的起始地址，Value 是一个集合，里面存储的元素是卡表的索引号。
 
- 
+　　由于 Region 数量比传统收集器的分代数量明显要多得多，因此 G1 收集器要比其他的传统垃圾收集器有着更高的内存占用负担。根据经验，G1 至少要耗费大约相当于 Java 堆容量 10% 至 20% 的额外内存来维持收集器工作。
 
-停顿时间模型的意思是能够支持指定在一个长度为M毫秒的时间片段内，消耗在垃圾收集上的时间大概率不超过N毫秒这样的目标，这几乎已经是实时Java（RTSJ）的中软实时垃圾收集器特征了。
+　　在并发标记阶段如何保证收集线程与用户线程互不干扰地运行？首先要解决的是用户线程改变对象引用关系时，必须保证其不能打破原本的对象图结构，导致标记结果出现错误，解决办法是 CMS 收集器采用增量更新算法实现，而 G1 收集器则是通过原始快照（SATB）算法来实现的。此外，垃圾收集对用户线程的影响还体现在回收过程中新创建对象的内存分配上，程序要继续运行就肯定会持续有新对象被创建，G1 为每一个 Region设计了两个名为 TAMS（Top at Mark Start）的指针，把 Region 中的一部分空间划分出来用于并发回收过程中的新对象分配，并发回收时新分配的对象地址都必须要在这两个指针位置以上。G1 收集器默认在这个地址以上的对象是被隐式标记过的，即默认它们是存活的，不纳入回收范围。与 CMS 中的 “ Concurrent Mode Failure ” 失败会导致 Full GC 类似，如果内存回收的速度赶不上内存分配的速度，G1 收集器也要被迫冻结用户线程执行，导致 Full GC 而产生长时间 “Stop The World”。
 
- 
+　　怎样建立起可靠的停顿预测模型？通过 -XX：MaxGCPauseMillis 参数指定的停顿时间只意味着垃圾收集发生之前的期望值，但 G1 收集器要怎么做才能满足用户的期望呢？G1 收集器的停顿预测模型是以衰减均值（Decaying Average）为理论基础来实现的，在垃圾收集过程中，G1 收集器会记录每个 Region 的回收耗时、每个 Region 记忆集里的脏卡数量等各个可测量的步骤花费的成本，并分析得出平均值、标准偏差、置信度等统计信息。“ 衰减平均值 ” 是指它会比普通的平均值更容易受到新数据的影响，平均值代表整体平均状态，但衰减平均值更准确地代表 “ 最近的 ” 平均状态。换句话说，Region 的统计状态越新越能决定其回收的价值。然后通过这些信息预测现在开始回收的话，由哪些 Region 组成回收集才可以在不超过期望停顿时间的约束下获得最高的收益。
 
- 
+　　G1 收集器的运作过程大致可划分为以下四个步骤：
 
-G1
+* 初始标记（Initial Marking）：仅仅只是标记一下 GC Roots 能直接关联到的对象，并且修改 TAMS 指针的值，让下一阶段用户线程并发运行时，能正确地在可用的 Region 中分配新对象。
 
- 
+  这个阶段需要停顿线程，但耗时很短，而且是借用进行 Minor GC 的时候同步完成的，所以 G1 收集器在这个阶段实际并没有额外的停顿。
 
- 
+* 并发标记（Concurrent Marking）：从 GC Root 开始对堆中对象进行可达性分析，递归扫描整个堆里的对象图，找出要回收的对象，这阶段耗时较长，但可与用户程序并发执行。
 
-可以面向堆内存任何部分来组成回收集（Collection Set，一般简称CSet）进行回收，衡量标准不再是它属于哪个分代，而是哪块内存中存放的垃圾数量最多，回收收益最大，这就是G1收集器的Mixed GC模式。
+  当对象图扫描完成以后，还要重新处理 SATB 记录下的在并发时有引用变动的对象。
 
- 
+* 最终标记（Final Marking）：对用户线程做另一个短暂的暂停，用于处理并发阶段结束后仍遗留下来的最后那少量的 SATB 记录。
 
- 
+* 筛选回收（Live Data Counting and Evacuation）：负责更新 Region 的统计数据，对各个 Region 的回收价值和成本进行排序，根据用户所期望的停顿时间来制定回收计划，可以自由选择任意多个 Region 构成回收集，然后把决定回收的那一部分 Region 的存活对象复制到空的 Region 中，再清理掉整个旧 Region 的全部空间。
 
-G1不再坚持固定大小以及固定数量的分代区域划分，而是把连续的
+  这里的操作涉及存活对象的移动，是必须暂停用户线程，由多条收集器线程并行完成的。
 
- 
+　　G1 收集器除了并发标记外，其余阶段也是要完全暂停用户线程的，换言之，它并非纯粹地追求低延迟，官方给它设定的目标是在延迟可控的情况下获得尽可能高的吞吐量，所以才能担当起 “ 全功能收集器 ” 的重任与期望。
 
- 
+　　G1 收集器运行示意图：
 
-Java堆划分为多个大小相等的独立区域（Region），每一个Region都可以根据需要，扮演新生代的Eden空间、Survivor空间，或者老年代空间
+![](image/G1收集器运行示意图.jpeg)
 
- 
+　　可以由用户指定期望的停顿时间是 G1 收集器很强大的一个功能，设置不同的期望停顿时间，可使得 G1 在不同应用场景中取得关注吞吐量和关注延迟之间的最佳平衡。
 
- 
+　　默认的停顿目标为两百毫秒，如果停顿时间调得非常低，收集器收集的速度逐渐跟不上分配器分配的速度，导致垃圾慢慢堆积，最终占满堆引发 Full GC 反而降低性能，所以通常把期望停顿时间设置为一两百毫秒或者两三百毫秒会是比较合理的。
 
-收集器能够对扮演不同角色的Region采用不同的策略去处理，这样无论是新创建的对象还是已经存活了一段时间、熬过多次收集的旧对象都能获取很好的收集效果。
+　　G1 的优点：可以指定最大停顿时间、分 Region 的内存布局、按收益动态确定回收集，G1从整体来看是基于 “ 标记 - 整理 ” 算法实现的收集器，但从局部（两个 Region 之间）上看又是基于 “ 标记-复制 ” 算法实现，无论如何，这两种算法都以为着 G1 运作期间不会产生内存空间碎片，垃圾收集完成之后能提供规整的可用内存。这种特性有利于程序长时间运行，在程序为大对象分配内存时不容易因无法找到连续内存空间而提前触发下一次收集。
 
- 
+　　G1 的弱项：在用户程序运行过程中，G1 无论是为了垃圾收集产生的内存占用（Footprint）还是程序运行时的额外执行负载（Overload）都要比 CMS 要高。
 
- 
+　　就内存占用来说，虽然 G1 和 CMS 都使用卡表来处理跨代指针，但 G1 的卡表实现更为复杂，而且堆中每个 Region，无论扮演的是新生代还是老年代角色，都必须有一份卡表，这导致 G1 的记忆集（和其他内存消耗）可能会占整个堆容量的 20% 乃至更多的内存空间；相比起来 CMS 的卡表就相当简单，只有唯一一份，而且只需要处理老年代到新生代的引用，反过来则不需要，由于新生代的对象具有朝生夕灭的不稳定性，引用变化频繁，能省下这个区域的维护开销是很划算的。
 
-Region中还有一类特殊的Humongous区域，专门用来存储大对象。G1认为只要大小超过了一个Region容量一半的对象即可判定为大对象
+　　在执行负载的角度上，同样由于两个收集器各自的细节实现特点导致了用户程序运行时的负载会有不同，譬如它们都使用到写屏障，CMS 用写后屏障来更新维护卡表；而 G1 除了使用写后屏障来进行同样的（由于 G1 的卡表结构复杂，其实是更烦琐的）卡表维护操作外，为了实现原始快照搜索（SATB）算法，还需要使用写前屏障来跟踪并发时的指针变化情况。相比起增量更新算法，原始快照搜索能够减少并发标记和重新标记阶段的消耗，避免 CMS 那样在最终标记阶段停顿时间过长的缺点，但是在用户程序运行过程中确实会产生由跟踪引用变化带来的额外负担。由于 G1 对写屏障的复杂操作要比 CMS 消耗更多的运算资源，所以 CMS 的写屏障实现是直接的同步操作，而 G1 就不得不将其实现为类似于消息队列的结构，把写前屏障和写后屏障中要做的事情都放到队列里，然后再异步处理。
 
- 
-
- 
-
-每个Region的大小可以通过参数-XX：G1HeapRegionSize设定，取值范围为1MB～32MB，且应为2的N次幂
-
- 
-
- 
-
-而对于那些超过了整个Region容量的超级大对象，将会被存放在N个连续的Hu
-
- 
-
- 
-
-mongous Region之中，G1的大多数行为都把Humongous Region作为老年代的一部分来进行看待
-
- 
-
- 
-
-虽然G1仍然保留新生代和老年代的概念，但新生代和老年代不再是固定的了，它们都是一系列区域（不需要连续）的动态集合
-
- 
-
- 
-
-G1收集器去跟踪各个Region里面的垃圾堆积的“价值”大小，价值即回收所获得的空间大小以及回收所需时间的经验值，然后在后台维护一个优先级列表，每次根据用
-
- 
-
- 
-
-户设定允许的收集停顿时间（使用参数-XX：MaxGCPauseMillis指定，默认值是200毫秒），优先处理回收价值收益最大的那些Region
-
- 
-
- 
-
-这种使用Region划分内存空间，以及具有优先级的区域回收方式，保证了G1收集器在有限的时间内获取尽可能高的收集效率。
-
- 
-
- 
-
-将Java堆分成多个独立Region后，Region里面存在的跨Region引用对象如何解决？
-
- 
-
- 
-
-用记忆集避免全堆作为GC Roots扫描，但在G1收集器上记忆集的应用其实要复杂很多，它的每个Region都维护有自己的记忆集，这些记忆集会记录下别的Region指向自己的指针，并标记这些
-
- 
-
- 
-
-指针分别在哪些卡页的范围之内
-
- 
-
- 
-
-G1的记忆集在存储结构的本质上是一种哈希表，Key是别的Region的起始地址，Value是一个集合，里面存储的元素是卡表的索引号
-
- 
-
- 
-
-由于Region数量比传统收集器的分代数量明显要多得多，因此G1收集器要比其他的传统垃圾收集器有着更高的内存占用负担
-
- 
-
- 
-
-根据经验，G1至少要耗费大约相当于Java堆容量10%至20%的额外内存来维持收集器工作。
-
- 
-
- 
-
-在并发标记阶段如何保证收集线程与用户线程互不干扰地运行
-
- 
-
- 
-
-用户线程改变对象引用关系时，必须保证其不能打破原本的
-
- 
-
- 
-
-对象图结构，导致标记结果出现错误，
-
- 
-
- 
-
-解决办法
-
- 
-
- 
-
-MS收集器采用增量更新算法实现，而G1收集器则是通过原始快照（SATB）算法来实
-
- 
-
- 
-
-现的。
-
- 
-
- 
-
-垃圾收集对用户线程的影响还体现在回收过程中新创建对象的内存分配上，程序要继续运行就肯定会持续有新对象被创建
-
- 
-
- 
-
-1为每一个Region设计了两个名为TAMS（Top at Mark Start）的指针，把Region中的一部分空间划分出来用于并发回收过程中的新对象分配，并发回收时新分配的对象地址都必须要在这两个指针位置以上
-
- 
-
- 
-
-G1收集器默认在这个地址以上的对象是被隐式标记过的，即默认它们是存活的，不纳入回收范围
-
- 
-
- 
-
-与CMS中的“Concurrent Mode Failure”失败
-
- 
-
- 
-
-会导致Full GC类似，如果内存回收的速度赶不上内存分配的速度，G1收集器也要被迫冻结用户线程执行，导致Full GC而产生长时间“Stop The World”。
-
- 
-
- 
-
-怎样建立起可靠的停顿预测模型
-
- 
-
- 
-
-通过-XX：MaxGCPauseMillis参数指定的停顿时间只意味着垃圾收集发生之前的期望值
-
- 
-
- 
-
-但G1收集器要怎么做才能满足用户的期望呢
-
- 
-
- 
-
-G1收集器的停顿预测模型是以衰减均值（Decaying Average）为理论基础来实现的，在垃圾收集过程中，G1收集器会记录每个Region的回收耗时、每个Region记忆集里的脏卡数量等各个可测量的步骤花费的成本，并分析得出平均值、标准偏差、置信度等统计信息。
-
-微信读书
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-36个笔记
-
-3.5 经典垃圾收集器
-
- 
-
-衰减平均值”是指它
-
- 
-
- 
-
-会比普通的平均值更容易受到新数据的影响，平均值代表整体平均状态，但衰减平均值更准确地代表“最近的”平均状态
-
- 
-
- 
-
-Region的统计状态越新越能决定其回收的价值
-
- 
-
- 
-
-通过这些信息预测现在开始回收的话，由哪些Region组成回收集才可以在不超过期望停顿时间的约束下获得最高的收益。
-
- 
-
- 
-
-，G1收集器的运作过程大致可划分为以下四个步骤：
-
- 
-
- 
-
-初始标记（Initial Marking）：仅仅只是标记一下GC Roots能直接关联到的对象，并且修改TAMS指针的值，让下一阶段用户线程并发运行时，能正确地在可用的Region中分配新对
-
- 
-
- 
-
-象。这个阶段需要停顿线程，但耗时很短，而且是借用进行Minor GC的时候同步完成的，所以G1收集器在这个阶段实际并没有额外的停顿。
-
- 
-
- 
-
-并发标记（Concurrent Marking）：从GC Root开始对堆中对象进行可达性分析，递归扫描整个堆里的对象图，找出要回收的对象，这阶段耗时较长，但可与用户程序并发执行。当对象图扫描完成以后，还要重新处理SATB记录下的在并发时有引用变动的对象。
-
- 
-
- 
-
-最终标记（Final Marking）：对用户线程做另一个短暂的暂停，用于处理并发阶段结束后仍遗留下来的最后那少量的SATB记录。
-
- 
-
- 
-
-筛选回收（Live Data Counting and Evacuation）：负责更新Region
-
- 
-
- 
-
-的统计数据，对各个Region的回收价值和成本进行排序，根据用户所期望的停顿时间来制定回收计划，可以自由选择任意多个Region构成回收集，然后把决定回收的那一部分Region的存活对象复制到空的Region中，再清理掉整个旧Region的全部空间
-
- 
-
- 
-
-这里的操作涉及存活对象的移动，是必须暂停用户线程，由多条收集器线程并行完成的。
-
- 
-
- 
-
-G1收集器除了并发标记外，其余阶段也是要完全暂停用户线程的，换言之，它并非纯粹地追求低延迟，官方给它设定的目标是在延迟可控的情况下获得尽可能高的吞吐量，所以才能担当起“全功能收集器”的重任与期望
-
- 
-
- 
-
-可以由用户指定期望的停顿时间是G1收集器很强大的一个功
-
- 
-
- 
-
-能，设置不同的期望停顿时间，可使得G1在不同应用场景中取得关注吞吐量和关注延迟之间的最佳平衡
-
- 
-
- 
-
-它默认的停顿目标为两百毫秒
-
- 
-
- 
-
-停顿时间调得非常低
-
- 
-
- 
-
-收集器收集的速度逐渐跟不上分配器分配的速度，导致垃圾慢慢堆积
-
- 
-
- 
-
-最终占满堆引发Ful
-
- 
-
- 
-
-GC反而降低性能
-
- 
-
- 
-
-通常把期望停顿时间设置为一两百毫秒或者两三百毫秒会是比较合理的
-
- 
-
- 
-
-可以指定最大停顿时间
-
- 
-
- 
-
-分Region的内存布局、按收益动态确定回收集
-
- 
-
- 
-
-G1从整体来看是基于“标记-整理”算法实现的收集器
-
- 
-
- 
-
-但从局部（两个Region之间）上看又是基于“标记-复制”算法实现
-
- 
-
- 
-
-着G1运作期间不会产生内存空间碎片，垃圾收集完成之后能提供规整的可用内存
-
- 
-
- 
-
-有利于程序长时间运行，在程序为大对象分配内存时不容易因无法找到连续内存空间而提前触
-
- 
-
- 
-
-发下一次收集。
-
- 
-
- 
-
-G1的弱项
-
- 
-
- 
-
-在用户程序运行过程中，G1无论是为了垃圾收集产生的内存占用（Footprint）还是程序运行时的额外执行负载（Overload）都要比CMS要高。
-
- 
-
- 
-
-就内存占用来说，虽然G1和CMS都使用卡表来处理跨代指针，但G1的卡表实现更为复杂，而且堆中每个Region，无论扮演的是新生代还是老年代角色，都必须有一份卡表，这导致G1的记忆集（和其他内存消耗）可能会占整个堆容量的20%乃至更多的内存空间；相比起来CMS的卡表就相当简单，只有
-
- 
-
- 
-
-唯一一份，而且只需要处理老年代到新生代的引用，反过来则不需要，由于新生代的对象具有朝生夕灭的不稳定性，引用变化频繁，能省下这个区域的维护开销是很划算的[插图]。
-
- 
-
- 
-
-在执行负载的角度上，同样由于两个收集器各自的细节实现特点导致了用户程序运行时的负载会有不同，譬如它们都使用到写屏障，CMS用写后屏障来更新维护卡表；而G1除了使用写后屏障来进行同样的（由于G1的卡表结构复杂，其实是更烦琐的）卡表维护操作外，为了实现原始快照搜索（SATB）算法，还需要使用写前屏障来跟踪并发时的指针变化情况
-
- 
-
- 
-
-相比起增量更新算法，原始快照搜索能够减少并发标记和重新标记阶段的消耗，避免CMS那样在最终标记阶段停顿时间过长的缺点，但是在用户程序运行过程中确实会产生由跟踪引用变化带来的额外负担。由于G1对写屏障的复杂操作要比CMS消耗更多的运算资源，所以CMS的写屏障实现是直接的同步操作，而G1就不得不将其实现为类似于消息队列的结构，把写前屏障和写后屏障中要做的事情都放到队列里，然后再异步处理。
-
- 
-
- 
-
-目前在小内存应用上CMS的表现大概率仍然要会优于G1，而在大内存应用上G1则大多能发挥其优势
-
- 
-
- 
-
-这个优劣势的Java堆容量平衡点通常在6GB至8GB之间
-
-微信读书
+　　目前在小内存应用上 CMS 的表现大概率仍然要会优于 G1，而在大内存应用上 G1 则大多能发挥其优势，这个优劣势的 Java 堆容量平衡点通常在 6GB 至 8GB 之间。
 
 ## 3.6 低延迟垃圾收集器
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
+　　衡量垃圾收集器的三项最重要的指标是：内存占用（Footprint）、吞吐量（Throughput）和延迟（Latency）。
 
-周志明
+　　一款优秀的收集器通常最多可以同时达成其中的两项。
 
-45个笔记
+　　在内存占用、吞吐量和延迟这三项指标里，延迟的重要性日益凸显，越发备受关注。其原因是随着计算机硬件的发展、性能的提升，大家越来越能容忍收集器多占用一点点内存；硬件性能增长，对软件系统的处理能力是有直接助益的，硬件的规格和性能越高，也有助于降低收集器运行时对应用程序的影响，换句话说，吞吐量会更高。但对延迟则不是这样，硬件规格提升，准确地说是内存的扩大，对延迟反而会带来负面的效果，虚拟机要回收完整的 1TB 的堆内存，毫无疑问要比回收 1GB 的堆内存耗费更多时间。
 
-3.6 低延迟垃圾收集器
+　　在 CMS 和 G1 之前的全部收集器，其工作的所有步骤都会产生 “ Stop The World ” 式的停顿，CMS 和 G1 分别使用增量更新和原始快照技术，实现了标记阶段的并发，不会因管理的堆内存变大，要标记的对象变多而导致停顿时间随之增长。但是对于标记阶段之后的处理，仍未得到妥善解决。CMS 使用标记 - 清除算法，虽然避免了整理阶段收集器带来的停顿，但是清除算法不论如何优化改进，在设计原理上避免不了空间碎片的产生，随着空间碎片不断淤积最终依然逃不过 “ Stop The World ” 的命运。G1 虽然可以按更小的粒度进行回收，从而抑制整理阶段出现时间过长的停顿，但毕竟也还是要暂停的。
 
- 
+　　各款收集器的并发情况：![](image/各款收集器的并发情况.jpeg)
 
-衡量垃圾收集器的三项最重要的指标是：内存占用（Footprint）、吞吐量（Throughput）和延迟（Latency）
+　　从上图可以看到 Shenandoah 和 ZGC，几乎整个工作过程全部都是并发的，只有初始标记、最终标记这些阶段有短暂的停顿，这部分停顿的时间基本上是固定的，与堆的容量、堆中对象的数量没有正比例关系。实际上，它们都可以在任意可管理的（譬如现在 ZGC 只能管理 4TB 以内的堆）堆容量下，实现垃圾收集的停顿都不超过十毫秒。这两款目前仍处于实验状态的收集器，被官方命名为 “ 低延迟垃圾收集器 ”（Low-Latency Garbage Collector或者Low-Pause-Time Garbage Collector）。
 
- 
+### 3.6.1 Shenandoah 收集器
 
- 
+　　Shenandoah 是一款只有 OpenJDK 才会包含，而 OracleJDK 里反而不存在的收集器。
 
-一款优秀的收集器通常最多可以同时达成其中的两项。
+　　Shenandoah 收集器项目的目标是实现一种能在任何堆内存大小下都可以把垃圾收集的停顿时间限制在十毫秒以内的垃圾收集器，该目标意味着相比 CMS 和 G1，Shenandoah 不仅要进行并发的垃圾标记，还要并发地进行对象清理后的整理动作。
 
- 
+　　对比 ZGC，Shenandoah 更像是 G1 的下一代继承者，它们两者有着相似的堆内存布局，在初始标记、并发标记等许多阶段的处理思路上都高度一致，甚至还直接共享了一部分实现代码，这使得部分对 G1 的打磨改进和 Bug 修改会同时反映在 Shenandoah 之上，而由于 Shenandoah 加入所带来的一些新特性，也有部分会出现在 G1 收集器中，譬如在并发失败后作为 “ 逃生门 ” 的 Full GC，G1 就是由于合并了 Shenandoah 的代码才获得多线程 Full GC 的支持。
 
- 
+　　Shenandoah 相比起 G1 有什么改进呢？
 
-在内存占用、吞吐量和延迟这三项指标里，延迟的重要性日益凸显，越发备受关注
+1. 虽然 Shenandoah 也是使用基于 Region 的堆内存布局，同样有着用于存放大对象的 Humongous Region，默认的回收策略也同样是优先处理回收价值最大的 Region……但在管理堆内存方面，它与 G1 至少有三个明显的不同之处，最重要的当然是支持并发的整理算法，G1 的回收阶段是可以多线程并行的，但却不能与用户线程并发
 
- 
+2. 其次，Shenandoah（目前）是默认不使用分代收集的，换言之，不会有专门的新生代 Region 或者老年代 Region 的存在，没有实现分代，并不是说分代对 Shenandoah 没有价值，这更多是出于性价比的权衡，基于工作量上的考虑而将其放到优先级较低的位置上。
 
- 
+3. 最后，Shenandoah 摒弃了在 G1 中耗费大量内存和计算资源去维护的记忆集，改用名为 “ 连接矩阵 ”（Connection Matrix）的全局数据结构来记录跨 Region 的引用关系，降低了处理跨代指针时的记忆集维护消耗，也降低了伪共享问题的发生概率。
 
-原因是随着计算机硬件的发展、性能的提升，我们越来越能容忍收集器多占用一点点内存；硬件性能增长，对软件系统的处理能力是有直接助益的，硬件的规格和性能越高，也有助于降低收集器运行时对应用程序的影响，换句话说，吞吐量会更高
+   连接矩阵可以简单理解为一张二维表格，如果 Region N 有对象指向Region M，就在表格的 N 行 M 列中打上一个标记，如下图所示：
 
- 
+   ![](image/Shenandoah收集器的连接矩阵示意图.jpeg)
 
- 
+   如果 Region 5 中的对象 Baz 引用了 Region 3 的 Foo，Foo 又引用了 Region 1 的 Bar，那连接矩阵中的 5 行 3 列、3 行 1 列就应该被打上标记。在回收时通过这张表格就可以得出哪些 Region 之间产生了跨代引用。
 
-但对延迟则不是这样，硬件规格提升，准确地说是内存的扩大，对延迟反而会带来负面的效果
+　　Shenandoah 收集器的工作过程大致可以划分为以下九个阶段：
 
- 
+1. 初始标记（Initial Marking）：与 G1 一样，首先标记与 GC Roots 直接关联的对象，这个阶段仍是 “Stop The World” 的，但停顿时间与堆大小无关，只与 GC Roots 的数量相关。
 
- 
+2. 并发标记（Concurrent Marking）：与 G1 一样，遍历对象图，标记出全部可达的对象，这个阶段是与用户线程一起并发的，时间长短取决于堆中存活对象的数量以及对象图的结构复杂程度。
 
-虚拟机要回收完整的1TB的堆内存，毫无疑问要比回收1GB的堆内存耗
+3. 最终标记（Final Marking）：与 G1 一样，处理剩余的 SATB 扫描，并在这个阶段统计出回收价值最高的 Region，将这些 Region 构成一组回收集（Collection Set）。最终标记阶段也会有一小段短暂的停顿。
 
- 
+4. 并发清理（Concurrent Cleanup）：这个阶段用于清理那些整个区域内连一个存活对象都没有找到的 Region（这类 Region 被称为Immediate Garbage Region）。
 
- 
+5. 并发回收（Concurrent Evacuation）：并发回收阶段是 Shenandoah 与之前 HotSpot 中其他收集器的核心差异。在这个阶段， Shenandoah 要把回收集里面的存活对象先复制一份到其他未被使用的 Region 之中。
 
-费更多时间
+   复制对象这件事情如果将用户线程冻结起来再做那是相当简单的，但如果两者必须要同时并发进行的话，就变得复杂起来了。其困难点是在移动对象的同时，用户线程仍然可能不停对被移动的对象进行读写访问，移动对象是一次性的行为，但移动之后整个内存中所有指向该对象的引用都还是旧对象的地址，这是很难一瞬间全部改变过来的。
 
- 
+   对于并发回收阶段遇到的这些困难，Shenandoah 将会通过读屏障和被称为 “ Brooks Pointers ” 的转发指针来解决。
 
- 
+   并发回收阶段运行的时间长短取决于回收集的大小。
 
-CMS和G1之前的全部收集器，其工作的所有步骤都会产生“Stop The World”式的停顿
+6. 初始引用更新（Initial Update Reference）：并发回收阶段复制对象结束后，还需要把堆中所有指向旧对象的引用修正到复制后的新地址，这个操作称为引用更新。
 
- 
+   设立这个阶段只是为了建立一个线程集合点，确保所有并发回收阶段中进行的收集器线程都已完成分配给它们的对象移动任务而已。
 
- 
+   初始引用更新时间很短，会产生一个非常短暂的停顿。
 
-CMS和G1分别使用增量更新和原始快照（见3.4.6节）技术，实现了标记阶段的并发，不会因管理的堆内存变大，要标记的对象变多而导致停顿时间随之增长。但是对于标记阶段之后的处理，仍未得到妥善解决
+7. 并发引用更新（Concurrent Update Reference）：真正开始进行引用更新操作，这个阶段是与用户线程一起并发的，时间长短取决于内存中涉及的引用数量的多少。
 
- 
+   并发引用更新与并发标记不同，它不再需要沿着对象图来搜索，只需要按照内存物理地址的顺序，线性地搜索出引用类型，把旧值改为新值即可。
 
- 
+8. 最终引用更新（Final Update Reference）：解决了堆中的引用更新后，还要修正存在于 GC Roots 中的引用。这个阶段是 Shenandoah 的最后一次停顿，停顿时间只与 GC Roots 的数量相关。 
 
-CMS使用标记-清除算法，虽然避免了整理阶段收集器带来的停顿，但是清除
+9. 并发清理（Concurrent Cleanup）：经过并发回收和引用更新之后，整个回收集中所有的 Region 已再无存活对象，这些 Region 都变成Immediate Garbage Regions 了，最后再调用一次并发清理过程来回收这些 Region 的内存空间，供以后新对象分配使用。
 
- 
+　　三个最重要的并发阶段：并发标记、并发回收、并发引用更新。
 
- 
+ 　　Shenandoah 收集器的工作过程图：
 
-算法不论如何优化改进，在设计原理上避免不了空间碎片的产生，随着空间碎片不断淤积最终依然逃不过“Stop The World”的命运。G1虽然可以按更小的粒度进行回收，从而抑制整理阶段出现时间过长的停顿，但毕竟也还是要暂停的。
+![](image/Shenandoah收集器的工作过程.jpeg)
 
- 
+　　转发指针是实现对象移动与用户程序并发的一种解决方案。此前，要做类似的并发操作，通常是在被移动对象原有的内存上设置保护陷阱（Memory Protection Trap），一旦用户程序访问到归属于旧对象的内存空间就会产生自陷中段，进入预设好的异常处理器中，再由其中的代码逻辑把访问转发到复制后的新对象上。 虽然确实能够实现对象移动与用户线程并发，但是如果没有操作系统层面的直接支持，这种方案将导致用户态频繁切换到核心态，代价是非常大的，不能频繁使用。
 
- 
+　　Brooks 提出的新方案不需要用到内存保护陷阱，而是在原有对象布局结构的最前面统一增加一个新的引用字段，在正常不处于并发移动的情况下，该引用指向对象自己，如下图：
 
-Shenandoah和ZGC，几乎整个工作过程全部都是并发
+![](image/BrooksPointers示意图1.jpeg)
 
- 
+　　从结构上来看，Brooks 提出的转发指针与某些早期 Java 虚拟机使用过的句柄定位有一些相似之处，两者都是一种间接性的对象访问方式，差别是句柄通常会统一存储在专门的句柄池中，而转发指针是分散存放在每一个对象头前面。
 
- 
+　　间接对象访问技术的缺点：每次对象访问会带来一次额外的转向开销，尽管这个开销已经被优化到只有一行汇编指令的程度。
 
-的，只有初始标记、最终标记这些阶段有短暂的停顿，这部分停顿的时间基本上是固定的，与堆的容量、堆中对象的数量没有正比例关系
+　　不过，毕竟对象定位会被频繁使用到，这仍是一笔不可忽视的执行成本，只是它比起内存保护陷阱的方案已经好了很多。转发指针加入后带来的收益自然是当对象拥有了一份新的副本时，只需要修改一处指针的值，即旧对象上转发指针的引用位置，使其指向新对象，便可将所有对该对象的访问转发到新的副本上。这样只要旧对象的内存仍然存在，未被清理掉，虚拟机内存中所有通过旧引用地址访问的代码便仍然可用，都会被自动转发到新对象上继续工作，如下图：
 
- 
+![](image/BrooksPointers示意图2.jpeg)
 
- 
+　　需要注意 Brooks 形式的转发指针在设计上决定了它是必然会出现多线程竞争问题的，如果收集器线程与用户线程发生的只是并发读取，那无论读到旧对象还是新对象上的字段，返回的结果都应该是一样的，这个场景还可以有一些 “ 偷懒 ” 的处理余地；但如果发生的是并发写入，就一定必须保证写操作只能发生在新复制的对象上，而不是写入旧对象的内存中。设想下面三件事情并发进行时的场景：
 
-，它们都可以在任意可管理的（譬如现在ZGC只能管理4TB以内的堆）堆容量下，实现垃圾收集的停顿都不超过十毫秒
+1. 收集器线程复制了新的对象副本；
+2. 用户线程更新对象的某个字段；
+3. 收集器线程更新转发指针的引用值为新副本地址。
 
- 
+　　如果不做任何保护措施，让事件 2 在事件 1、事件 3 之间发生的话，将导致的结果就是用户线程对对象的变更发生在旧对象上，所以这里必须针对转发指针的访问操作采取同步措施，让收集器线程或者用户线程对转发指针的访问只有其中之一能够成功，另外一个必须等待，避免两者交替进行。实际上 Shenandoah 收集器是通过比较并交换（Compare And Swap，CAS）操作来保证并发时对象的访问正确性的。
 
- 
+　　转发指针另一点必须注意的是执行频率的问题，尽管通过对象头上的 Brooks Pointer 来保证并发时原对象与复制对象的访问一致性，这件事情从原理上看是不复杂的，但是对象的读取、写入，对象的比较，为对象哈希值计算，用对象加锁等，这些操作都属于对象访问的范畴，它们在代码中比比皆是，要覆盖全部对象访问操作，Shenandoah 不得不同时设置读、写屏障去拦截。
 
-这两款目前仍处于实验状态的收集器，被官方命名为“低延迟垃圾收集器”（Low-Latency Garbage Collector或者Low-Pause-Time Garbage Collector）。
+　　为了实现 Brooks Pointer，Shenandoah 在读、写屏障中都加入了额外的转发处理，尤其是使用读屏障的代价，这是比写屏障更大的。代码里对象读取的出现频率要比对象写入的频率高出很多，读屏障数量自然也要比写屏障多得多，所以读屏障的使用必须更加谨慎，不允许任何的重量级操作。
 
- 
+　　Shenandosh 的开发者计划在 JDK 13 中将 Shenandoah 的内存屏障模型改进为基于引用访问屏障（Load Reference Barrier）的实现。“ 引用访问屏障 ” 是指内存屏障只拦截对象中数据类型为引用类型的读写操作，而不去管原生数据类型等其他非引用字段的读写，这能够省去大量对原生类型、对象比较、对象加锁等场景中设置内存屏障所带来的消耗。
 
- 
+### 3.6.2 ZGC 收集器 
 
-Shenandoah是一款只有OpenJDK才会包含，而OracleJDK里反而不存在的收集器
+　　ZGC（Z Garbage Collector）是一款在 JDK 11 中新加入的具有实验性质的低延迟垃圾收集器，是由 Oracle 公司研发的。2018 年 Oracle 创建了 JEP 333 将 ZGC 提交给 OpenJDK，推动其进入 OpenJDK 11 的发布清单之中。
 
- 
+　　ZGC 和 Shenandoah 的目标是高度相似的，都希望在尽可能对吞吐量影响不太大的前提下，实现在任意堆内存大小下都可以把垃圾收集的停顿时间限制在十毫秒以内的低延迟。
 
- 
+　　早在 2005 年，运行在 Azul VM 上的 PGC 就已经实现了标记和整理阶段都全程与用户线程并发运行的垃圾收集，而运行在 Zing VM 上的 C4 收集器是 PGC 继续演进的产物，主要增加了分代收集支持，大幅提升了收集器能够承受的对象分配速度。
 
-目标是实现一种能在任何堆内存大小下都可以把垃圾收集的停顿时间限制在十毫秒以内的垃圾收集器
+　　ZGC 收集器是一款基于 Region 内存布局的，（暂时）不设分代的，使用了读屏障、染色指针和内存多重映射等技术来实现可并发的标记 - 整理算法的，以低延迟为首要目标的一款垃圾收集器。
 
- 
+　　ZGC 也采用基于 Region 的堆内存布局，但与 Shenandooah 和 G1 不同的是，ZGC 的 Region（在一些官方资料中将它称为 Page 或者 ZPage）具有动态性 —— 动态创建和销毁，以及动态的区域容量大小。在 x64 硬件平台下，ZGC 的 Region 可以具有如下图所示的大、中、小三类容量：
 
- 
+![](image/ZGC的堆内存布局.jpeg)
 
-该目标意味着相比CMS和G1，Shenandoah不仅要进行并发的垃圾标记，还要并发地进行对象清理后的整理动作。
+* 小型 Region（Small Region）：容量固定为 2MB，用于放置小于256KB 的小对象。
 
- 
+* 中型 Region（Medium Region）：容量固定为 32MB，用于放置大于等于 256KB 但小于 4MB 的对象。
 
- 
+* 大型 Region（Large Region）：容量不固定，可以动态变化，但必须为 2MB 的整数倍，用于放置 4MB 或以上的大对象。
 
-Shenandoah
+  每个大型Region中只会存放一个大对象。
 
- 
+  但它的实际容量完全有可能小于中型 Region，最小容量可低至 4MB。
 
- 
+  大型 Region 在 ZGC 的实现中是不会被重分配（重分配是 ZGC 的一种处理动作，用于复制对象的收集器阶段）的，因为复制一个大对象的代价非常高昂。
 
-像是G1的下一代
+　　ZGC 的核心问题——并发整理算法的实现。
 
- 
+　　Shenandoah 使用转发指针和读屏障来实现并发整理，ZGC 虽然同样用到了读屏障，但用的却是一条与 Shenandoah 完全不同，更加复杂精巧的解题思路。
 
- 
+　　ZGC 收集器有一个标志性的设计是它采用的染色指针技术（Colored Pointer，其他类似的技术中可能将它称为 Tag Pointer 或者 Version Pointer ）。 从前，如果要在对象上存储一些额外的、只供收集器或者虚拟机本身使用的数据，通常会在对象头中增加额外的存储字段，如对象的哈希码、分代年龄、锁记录等就是这样存储的。这种记录方式在有对象访问的场景下是很自然流畅的，不会有什么额外负担。但如果对象存在被移动过的可能性，即不能保证对象访问能够成功呢？又或者有一些根本就不会去访问对象，但又希望得知该对象的某些信息的应用场景呢？能不能从指针或者与对象内存无关的地方得到这些信息，譬如是否能够看出来对象被移动过？某个对象只有它的引用关系能决定它存活与否，对象上其他所有的属性都不能够影响它的存活判定结果。HotSpot 虚拟机的几种收集器有不同的标记实现方案，有的把标记直接记录在对象头上（如 Serial 收集器），有的把标记记录在与对象相互独立的数据结构上（如 G1、Shenandoah 使用了一种相当于堆内存的 1/64 大小的，称为 BitMap 的结构来记录标记信息），而ZGC 的染色指针是最直接的、最纯粹的，它直接把标记信息记在引用对象的指针上。
 
-继承者，它们两者有着相似的堆内存布局，在初始标记、并发标记等许多阶段的处理思路上都高度一致，甚至还直接
+　　染色指针是一种直接将少量额外的信息存储在指针上的技术。
 
- 
+　　尽管 Linux 下 64 位指针的高 18 位不能用来寻址，但剩余的 46 位指针所能支持的 64TB 内存在今天仍然能够充分满足大型服务器的需要。鉴于此，ZGC 的染色指针技术继续盯上了这剩下的 46 位指针宽度，将其高4位提取出来存储四个标志信息。通过这些标志位，虚拟机可以直接从指针中看到其引用对象的三色标记状态、是否进入了重分配集（即被移动过）、是否只能通过 finalize() 方法才能被访问到，如下图所示：
 
- 
+![](image/染色指针示意.jpeg)
 
-共享了一部分实现代码，这使得部分对G1的打磨改进和Bug修改会同时反映在Shenandoah之上，而由于Shenandoah加入所带来的一些新特性，也有部分会出现在G1收集器中，譬如在并发失败后作为“逃生门”的Full GC[插图]，G1就是由于合并了Shenandoah的代码才获得多线程Full GC的支持
+　　虽然染色指针有 4TB 的内存限制，不能支持 32 位平台，不能支持压缩指针（-XX：+UseCompressedOops）等诸多约束，但它带来的收益也是非常可观的。
 
- 
+　　染色指针的三大优势：
 
- 
-
-Shenandoah也是使用基于Region的堆内存布局，同样有着用于存放大对象的Humongous Region，默认的回收策略也同样是优先处理回收价值最大的Region……但在管理堆内存方面，它与G1至少有三个明显的不同之处，最重要的当然是支持并发的整理算法，G1的回收阶段是可以多线程并行的，但却不能与用户线程并发，
-
- 
-
- 
-
-Shenandoah（目前）是默认不使用分代收集的，换言之，不会有专门的新生代Region或者老年代Region的存在，没有实现分代，并不是说分代对Shenandoah没有价值，这更多是出于性价比的权衡，基于工作量上的考虑而将其放到优先级较低的位置上
-
- 
-
- 
-
-Shenandoah摒弃了在G1中耗费大量内存和计算资源去维护的记忆集，改用名为“连接矩阵”（Connection Matrix）的全局数据结构来记录跨Region的引用关系，降低了处理跨代指针时的记忆集维护消耗，也降低了伪共享问题（见3.4.4节）的发生概率
-
- 
-
- 
-
-连接矩阵可以简单理解为一张二维表格，如果Region N有对象指向Region M，就在表
-
- 
-
- 
-
-格的N行M列中打上一个标记
-
- 
-
- 
-
-如果Region 5中的对象Baz引用了Region 3的Foo，Foo又引用了Region 1的Bar，那连接矩阵中的5行3列、3行1列就应该被打上标记。在回收时通过这张表格就可以得出哪些Region之间产生了跨代引用
-
- 
-
- 
-
-Shenandoah收集器的工作过程大致可以划分为以下九个阶段
-
- 
-
- 
-
-初始标记（Initial Marking）：与G1一样，首先标记与GC Roots直接关联的对象，这个阶段仍是“Stop The World”的，但停顿时间与堆大小无关，只与GC Roots的数量相关。
-
- 
-
- 
-
-并发标记（Concurrent Marking）：与G1一样，遍历对象图，标记出全部可达的对象，这个阶段是与用户线程一起并发的，时间长短取决于堆中存活对象的数量以及对象图的结构复杂
-
- 
-
- 
-
-程度
-
- 
-
- 
-
-最终标记（Final Marking）：与G1一样，处理剩余的SATB扫描，并在这个阶段统计出回收价值最高的Region，将这些Region构成一组回收集（Collection Set）。最终标记阶段也会有一小段短暂的停顿。
-
- 
-
- 
-
-并发清理（Concurrent Cleanup）：这个阶段用于清理那些整个区域内连一个存活对象都没有找到的Region（这类Region被称为Immediate Garbage Region）。
-
- 
-
- 
-
-并发回收（Concurrent Evacuation）：并发回收阶段是Shenandoah与之前HotSpot中其他收集器的核心差异。在这个阶段，Shenandoah要把回收集里面的存活对象先复制一份到其他未被使用的Region之中。复制对象这
-
- 
-
- 
-
-件事情如果将用户线程冻结起来再做那是相当简单的，但如果两者必须要同时并发进行的话，就变得复杂起来了。其困难点是在移动对象的同时，用户线程仍然可能不停对被移动的对象进行读写访问，移动对象是一次性的行为，但移动之后整个内存中所有指向该对象的引用都还是旧对象的地址，这是很难一瞬间全部改变过来的。
-
- 
-
- 
-
-对于并发回收阶段遇到的这些困难，Shenandoah将会通过读屏障和被称为“Brooks Pointers”的转发指针来解决
-
- 
-
- 
-
-并发回收阶段运行的时间长短取决于回收集的大小
-
- 
-
- 
-
-初始引用更新（Initial Update Reference）：并发回收阶段复制对象结束后，还需要把堆中所有指向旧对象
-
- 
-
- 
-
-的引用修正到复制后的新地址，这个操作称为引用更新
-
- 
-
- 
-
-设立这个阶段只是为了建立一个线程集合点，确保所有并发回收阶段中进行的收集器线程都已完成分配给它们的对象移动任务而已。初始引用更新时间很短，会产生一个非常短暂的停顿。
-
- 
-
- 
-
-并发引用更新（Concurrent Update Reference）：真正开始进行引用更新操作，这个阶段是与用户线程一起并发的，时间长短取决于内存中涉及的引用数量的多少
-
- 
-
- 
-
-并发引用更新与并发标记不同，它不再需要沿着对象图来搜索，只需要按照内存物理地址的顺序，线性地搜索出引用类型，把旧值改为新值即可。
-
- 
-
- 
-
-最终引用更新（Final Update
-
- 
-
- 
-
-Reference）：解决了堆中的引用更新后，还要修正存在于GC Roots中的引用。这个阶段是Shenandoah的最后一次停顿，停顿时间只与GC Roots的数量相关。
-
-微信读书
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-50个笔记
-
-3.6 低延迟垃圾收集器
-
- 
-
-并发清理（Concurrent Cleanup）：经过并发回收和引用更新之后，整个回收集中所有的Region已再无存活对象，这些Region都变成Immediate Garbage Regions了，最后再调用一次并发清理过程来回收这些Region的内存空间，供以后新对象分配使用。
-
- 
-
- 
-
-三个最重要的并发阶段（并发标记、并发回收、并发引用更新
-
- 
-
- 
-
-对象移动与用户程序并发
-
- 
-
- 
-
-要做类似的并发操作，通常是在被移动对象原有的内存上设置保护陷阱（Memory Protection Trap），
-
- 
-
- 
-
-一旦用户程序访问到归属于旧对象的内存空间就会产生自陷中段，进入预设好的异常处理器中，再由其中的代码逻辑把访问转发到复制后的新对象上。
-
- 
-
- 
-
-虽然
-
- 
-
- 
-
-确实能够实现对象移动与用户线程并发，但是如果没有操作系统层面的直接支持，这种方案将导致用户态频繁切换到核心态[插图]，代价是非常大的，不能频繁使用[插图]。
-
- 
-
- 
-
-Brooks提出的新方案不需要用到内存保护陷阱，而是在原有对象布局结构的最前面统一增加一个新的引用字段，在正常不处于并发移动的情况下，
-
- 
-
- 
-
-该引用指向对象自己
-
- 
-
- 
-
-从结构上来看，Brooks提出的转发指针与某些早期Java虚拟机使用过的句柄定位（关于对象定位详见第2章）有一些相似之处，两者都是一种间接性的对象访问方式，差别是句柄通常会统一存储在专门的句柄池中，而转发指针是分散存放在每一个对象头前面
-
- 
-
- 
-
-缺点
-
- 
-
- 
-
-每次对象访问会带来一次额外的转向开销，尽管这个开销已经被优化到只有一行汇编指令的程度
-
- 
-
- 
-
-对象定位会被频繁使用到
-
- 
-
- 
-
-仍是一笔不可忽视的执行成本，
-
- 
-
- 
-
-只是它比起内存保护陷阱的方案已经好了很多
-
- 
-
- 
-
-转发指针加入后带来的收益自然是当对象拥有了一份新的副本时，只需要修改一处指针的值，即旧对象上转发指针的引用位置，使其指向新对象，便可将所有对该对象的访问转发到新的副本上。这样只要旧对象的内存仍然存在，未被清理掉，虚拟机内存中所有通过旧引用地址访问的代码便仍然可用，都会被自动转发到新对象上继续工作，
-
- 
-
- 
-
-Brooks形式的转发指针在设计上决定了它是必然会出现多线程竞争问题的，如果收集器线程与用户线程发生的只是并发读取，那无论读到旧对象还是新对象上的字段，返回的结果都应该是一样的，这个场景还可以有一些“偷懒”的处理余地；但如果发生
-
- 
-
- 
-
-的是并发写入，就一定必须保证写操作只能发生在新复制的对象上，而不是写入旧对象的内存中
-
- 
-
- 
-
-收集器线程复制了新的对象副本；2）用户线程更新对象的某个字段；3）收集器线程更新转发指针的引用值为新副本地址。
-
- 
-
- 
-
-如果不做任何保护措施，让事件2
-
- 
-
- 
-
-在事件1、事件3之间发生的话，将导致的结果就是用户线程对对象的变更发生在旧对象上，所以这里必须针对转发指针的访问操作采取同步措施，让收集器线程或者用户线程对转发指针的访问只有其中之一能够成功，另外一个必须等待，避免两者交替进行
-
- 
-
- 
-
-实际上Shenandoah收集器是通过比较并交换（Compare And Swap，CAS）操作[插图]来保证并发时对象的访问正确性的
-
- 
-
- 
-
-转发指针另一点必须注意的是执行频率的问题，
-
- 
-
- 
-
-尽管通过对象头上的Brooks Pointer来保证并发时原对象与复制对象的访问一致性
-
- 
-
- 
-
-为了实现Brooks Pointer，Shenandoah在读、写屏障中都加入了额外的转发处理，尤其是使用读屏障的代价，这是比写屏障更大的。代码里对象读取的出现频率要比对象写入的频率高出很多，读屏障数量自然也要比写屏障多得多，所以读屏障的使用必须更加谨慎，不允许任何的重量
-
- 
-
- 
-
-级操作
-
- 
-
- 
-
-计划在JDK 13中将Shenandoah的内存屏障模型改进为基于引用访问屏障（Load Reference Barrier）[插图]的实现
-
- 
-
- 
-
-“引用访问屏障”是指内存屏障只拦截对象中数据类型为引用类型的读写操作，而不去管原生数据类型等其他非引用字段的读写，这能够省去大量对原生类型、对象比较、对象加锁等场景中设置内存屏障所带来的消耗。
-
- 
-
- 
-
-ZGC
-
- 
-
- 
-
-作Z Garbage Collector
-
- 
-
- 
-
-是一款在JDK 11中新加入的具有实验性质[插图]的低延迟垃圾收集器，是由Oracle公司研发的。
-
- 
-
- 
-
-2018年Oracle创建了JEP 333将ZGC提交给OpenJDK，推动其进入OpenJDK 11的发布清单之中。
-
- 
-
- 
-
-ZGC和Shenandoah的目标是高度相似的，都希望在尽可能对吞吐量影响不太大的前提下[插图]，实现在任意堆内存大小下都可以把垃圾收集的停顿时间限制在十毫秒以内的低延迟
-
- 
-
- 
-
-早在2005年，运行在Azul VM上的PGC就已经实现了标记和整理阶段都全程与用户线程并发运行的垃圾收集
-
- 
-
- 
-
-运行在Zing VM上的C4收集器是PGC继续演进的产物，主要增加了分代收集支持，大幅提升了收集器能够承受的对象分配速度
-
- 
-
- 
-
-ZGC收集器是一款基于Region内存布局的，（暂时）不设分代的，使用了读屏障、染色指针和内存多重映射等技术来实现可并发的标记-整理算法的，以低延迟为首要目标的一款垃圾收集器
-
- 
-
- 
-
-ZGC也采用基于Region的堆内存布局，但与它们不同的是，ZGC的Region（在一些官方资料中将它称为Page或者ZPage，本章为行文一致继续称为Region）具有
-
- 
-
- 
-
-动态性——动态创建和销毁，以及动态的区域容量大小
-
- 
-
- 
-
-在x64硬件平台下，ZGC的Region可以具有如图3-19所示的大、中、小三类容量：
-
- 
-
- 
-
-小型Region（Small Region）：容量固定为2MB，用于放置小于256KB的小对象。
-
- 
-
- 
-
-中型Region（Medium Region）：容量固定为32MB，用于放置大于等于256KB但小于4MB的对象。
-
- 
-
- 
-
-大型Region（Large Region）：容量不固定，可以动态变化，但必须为2MB的整数倍，用于放置4MB或以上的大对象
-
- 
-
- 
-
-每个大型Region中只会存放一个大对象，
-
- 
-
- 
-
-但它的实际容量完全有可能小于中型Region，最小容量可低至4MB
-
- 
-
- 
-
-大型Region在ZGC的
-
- 
-
- 
-
-实现中是不会被重分配（重分配是ZGC的一种处理动作，用于复制对象的收集器阶段，稍后会介绍到）的，因为复制一个大对象的代价非常高昂
-
- 
-
- 
-
-ZGC的核心问题——并发整理算法的实现
-
- 
-
- 
-
-Shenandoah使用转发指针和读屏障来实现并发整理，ZGC虽然同样用到了读屏障，但用的却是一条与Shenandoah完全不同，更加复杂精巧的解题思路。
-
- 
-
- 
-
-ZGC收集器有一个标志性的设计是
-
- 
-
- 
-
-它采用的染色指针技术（Colored Pointer，其他类似的技术中可能将它称为Tag Pointer或者Version Pointer）
-
-微信读书
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-56个笔记
-
-3.6 低延迟垃圾收集器
-
- 
-
-如果我们要在对象上存储一些额外的、只供收集器或者虚拟机本身使用的数据，通常会在对象头中增加额外的存储字段（详见2.3.2节的内容），如对象的哈希码、分代年龄、锁记录等就是这样存储的。这种记录方式在有对象访问的场景下是很自然流畅的，不会有什么额外负担。但如果对象存在被移动过的可能性，即不能保证对象访问能够成功呢？又或者有一些根本就不会去访问对象，但又希望得知该对象的某些信息的应用场景呢？能不能从指针或者与对象内存无关的地方得到这些信息，譬如是否能够看出来对象被移动过？
-
- 
-
- 
-
-某个对象只有它的引用关系能决定它存活与否，对象上其他所有的属性都不能够影响它的存活判定结果
-
- 
-
- 
-
-G1、Shenandoah使用了一种相当于堆内存的1/64大小的，称为BitMap的结构来记录标记信息
-
- 
-
- 
-
-ZGC的染色指针是最直接的、最纯粹的，它直接把标记信息记在引用对象的指针上
-
- 
-
- 
-
-染色指针是一种直接将少量额外的信息存储在指针上的技术
-
- 
-
- 
-
-尽管Linux下64位指针的高18位不能用来寻址，但剩余的46位指针所能支持的64TB内存在今天仍然能够充分满足大型服务器的需要。鉴于此，ZGC的染色指针技术继续盯上了这剩下的46位指针宽度，将其高4位提取出来存储四个标志信息
-
- 
-
- 
-
-通过这些标志位，虚拟机可以直接从指针中看到其引用对象的三色标记状态、是否进入了重分配集（即被移动过）、是否只能通过finalize()方法才能被访问到
-
- 
-
- 
-
-染色指针有4TB的内存限制，不能支持32位平台，不能支持压缩指针（-XX：+UseCompressedOops）等诸多约束，但它带来的收益也是非常可观的
-
- 
-
- 
-
-染色指针的三大优势：
-
- 
-
- 
-
-染色指针可以使得一旦某个Region的存活对象被移走之后，这个Region立即就能够被释放和重用掉，而不必等待整个堆中所有指向该
-
- 
-
- 
-
-Region的引用都被修正后才能清理
+* 染色指针可以使得一旦某个 Region 的存活对象被移走之后，这个Region 立即就能够被释放和重用掉，而不必等待整个堆中所有指向该Region 的引用都被修正后才能清理。
 
  
 
