1.深入理解Java虚拟机书籍完成，2.整理

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -14,7 +14,7 @@
 8. 《 Android 源码设计模式解析与实战》
 9. 《深入探索 Android 热修复技术原理》
 10. 《 Android 插件化开发指南》
-11. 《 深入理解 Java 虚拟机》
+11. 《 深入理解 Java 虚拟机》 
 
 ### 2. 学习
 
@@ -42,6 +42,7 @@
 ### 书籍阅读
 
 1. 《好的婚姻，要守护财产和爱》2020年1月
+2. 《深入理解 Java 虚拟机》 2020 年 3 月
 
 ### 影视
 
@@ -73,8 +74,9 @@
 
 1. implementation 与 api 的区别
 2. jar 与 aar 的区别
-3. 《深入理解 Java 虚拟机》第 10-13  章
+3. 《深入理解 Java 虚拟机》第 10-13  、2-3章 本书完结
 4. RabbitMQ 知识整理
+5. 
 
 
 
@@ -110,6 +112,7 @@
    * hashCode
    * arrayMap
    * treeMap
+   * NIO
 5. 数据结构
    * 链表与队列
    * 树
