增加volatile的知识

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -77,6 +77,7 @@
 3. 《深入理解 Java 虚拟机》第 10-13  、2-3章 本书完结
 4. RabbitMQ 知识整理
 5. Android 中 Home 键的监听
+6. Fragment 知识总结
 
 
 
@@ -87,7 +88,7 @@
    * Handle、Message、Looper
    * Binder
    * Intent
-   * Fragment
+   * Fragment - 已完成
    * SurfaceView 
 2. 开源库
    * Glide
@@ -96,7 +97,7 @@
    * RxJava
    * XWalkView
    * LRUCache
-   * RePlugin - 插件化
+   * 插件化
    * 热修复
    * RabbitMQ - 已完成
 3. 网络
