--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -78,6 +78,9 @@
 4. RabbitMQ 知识整理
 5. Android 中 Home 键的监听
 6. Fragment 知识总结
+7. 《年纪轻轻，就有了猫》54%
+8. 绘画 2 幅
+9. 锻炼 10 天
 
 
 
@@ -114,6 +117,7 @@
    * arrayMap
    * treeMap
    * NIO
+   * String
 5. 数据结构
    * 链表与队列
    * 树
