1.整理volatile与synchronized，2.整理文章

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -81,6 +81,9 @@
 7. 《年纪轻轻，就有了猫》54%
 8. 绘画 2 幅
 9. 锻炼 10 天
+10. 同步知识
+11. volatile 知识
+12. synchronized 知识
 
 
 
@@ -91,17 +94,34 @@
    * Handle、Message、Looper
    * Binder
    * Intent
-   * Fragment - 已完成
+   * 进程保活
+   * 布局优化
+   * AsyncTask
+   * 事件分发机制
+   * View 绘制流程
+   * Window、Activity、DecorView 以及 ViewRoot 之间的关系
+   * AIDL
+   * AMS、WMS、PMS
+   * 内存泄漏与内存溢出
+   * 屏幕适配
+   * 缓存机制
+   * 多线程通信
    * SurfaceView 
+   * Fragment - 已完成
 2. 开源库
    * Glide
-   * OkHTTP
+   * OkHttp
    * Retrofit 源码分析
    * RxJava
+   * RxAndroid
    * XWalkView
    * LRUCache
+   * Picasso
+   * WebSocket
+   * eventBus
    * 插件化
    * 热修复
+   * Flutter 与 RN
    * RabbitMQ - 已完成
 3. 网络
    * 计算机网络知识基础
@@ -110,18 +130,22 @@
    * Socket
 4. Java
    * 线程
-   * volatile - 数据从主内存直接获取
    * threadLocal原理
-   * synchronized - 同步
    * hashCode
    * arrayMap
    * treeMap
    * NIO
    * String
+   * ReentrantLock
+   * Condition
+   * volatile - 数据从主内存直接获取 - 已完成
+   * synchronized - 同步 - 已完成
 5. 数据结构
    * 链表与队列
    * 树
    * 哈希表
    * 排序算法
    * 查找算法
+6. 其他
+   * Gradle
 
