--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -95,14 +95,13 @@
    * Binder
    * Intent
    * 进程保活
-   * 布局优化
+   * 优化
    * AsyncTask
    * 事件分发机制
    * View 绘制流程
    * Window、Activity、DecorView 以及 ViewRoot 之间的关系
    * AIDL
    * AMS、WMS、PMS
-   * 内存泄漏与内存溢出
    * 屏幕适配
    * 缓存机制
    * 多线程通信
@@ -122,6 +121,7 @@
    * 插件化
    * 热修复
    * Flutter 与 RN
+   * Okio
    * RabbitMQ - 已完成
 3. 网络
    * 计算机网络知识基础
@@ -148,4 +148,5 @@
    * 查找算法
 6. 其他
    * Gradle
+   * 责任链模式
 
