图解HTTP第一章

--- a/DesignPatterns/责任链模式.md
+++ b/DesignPatterns/责任链模式.md
@@ -1,20 +1,51 @@
 # 责任链模式
 
 ## 介绍
-　　责任链模式
+　　责任链模式（Chain of Responsibility Pattern）为请求创建了一个接收者对象的链。责任链模式给与请求的类型，对请求的发送者和接收者进行解耦。责任链模式属于行为型模式。
 
+　　在责任链模式中，通常每个接收者都包含对另一个接收者的引用。如果一个对象不能处理该请求，那么它会把相同的请求传给下一个接收者，依次类推。
 
+## 意图
 
-* **默认适配器模式**（Default Adapter Pattern） 或**缺省适配器模式**
-　　当不需要全部实现接口提供的方法时，可先设计一个抽象类实现接口，并为该接口中每个方法提供一个默认实现（空方法），那么该抽象类的子类可有选择地覆盖父类的某些方法来实现需求，它适用于一个接口不想使用其所有的方法的情况。因此也称为 **单接口适配器模式** 。
+　　避免请求发送者与接收者耦合在一起，并且让多个对象都有可能接收请求，沿着这条责任链传递请求，直到有对象处理它为止。
 
-## 总结
-* 结构型模式描述如何将类或者对象结合在一起形成更大的结构。
-* 适配器模式用于将一个接口转换成客户希望的另一个接口，适配器模式使接口不兼容的那些类可以一起工作，其别名为包装器。适配器模式既可以作为类结构性模式，也可以作为对象结构性模式。
-* 适配器模式包含四个角色：**目标抽象类**定义客户要用的特定领域的接口；**适配器类**可以调用另一个接口，作为一个转换器，对适配者和抽象目标类进行适配，它是适配器模式的核心；**适配者类**是被适配的角色，它定义了一个已经存在的接口，这个接口需要适配；在**客户类**中针对目标抽象类进行编程，调用在目标抽象类中定义的业务方法。
-* 在类适配器模式中，适配器类实现了目标抽象类接口并继承了适配者类，并在目标抽象类的实现方法中调用所继承的适配者类的方法；在对象适配器模式中，适配器类继承了目标抽象类并定义了一个适配者类的对象实例，在所继承的目标抽象类方法中调用适配者类的相应业务方法。
-* 适配器模式的主要优点是将目标类和适配者类解耦，增加了类的透明性和复用性，同时系统的灵活性和扩展性都非常好，更换适配器或者增加新的适配器都非常方便，符合“开闭原则”；类适配器模式的缺点是适配器类在很多编程语言中不能同时适配多个适配者类，对象适配器模式的缺点是很难置换适配者类的方法。
-* 适配器模式适用情况包括：系统需要使用现有的类，而这些类的接口不符合系统的需要；想要建立一个可以重复使用的类，用于与一些彼此之间没有太大关联的一些类一起工作。
+## 主要解决
+
+　　责任链上的处理者负责处理请求，客户只需要将请求发送到责任链上即可，无需关心请求的处理细节和请求的传递，所以责任链将请求的发送者和请求的处理者解耦了。
+
+## 使用
+
+　　如何使用：在处理消息的时候经过多个拦截类处理。
+
+　　如何解决：拦截的类都实现统一接口。
+
+　　关键代码：在处理端自由的添加或删除拦截类，拦截类提供统一的接口接收传递的消息，拦截者自行判断是否可以处理消息，并将消息传递给下一个拦截者。
+
+## 应用实例
+
+1. 红楼梦中的 “ 击鼓传花 ”。
+2. JS 中的事件冒泡。
+3. JAVE WEB 中 Apache Tomcat 对 Encoding 的处理，Struts2 的拦截器，jsp servlet 的 Filter。
+4. OkHttp 的请求与响应处理。
+
+## 优点
+
+1. 降低耦合度。它将请求的发送者和接收者解耦。
+2. 简化了对象。使得对象不需要知道链的结构，每个链（处理类）也只需要处理自己负责的部分。
+3. 增强给对象指派职责的灵活性。通过改变链内的成员或者调动它们的次序，允许动态地增加或者删除责任。
+4. 增加新的请求处理类很方便。
+
+## 缺点
+
+1. 不能保证请求一定被接收。可能一个处理者就拦截消息直接返回了，或者出现了异常，导致消息无法发送给下一个处理者。
+2. 系统性能将受到一定影响，并且在进行代码调试时不太方便，可能会造成循环调用。
+3. 可能不容易观察运行时的特征，有碍于除错。
+
+## 使用场景
+
+1. 有多个对象可以处理同一个请求，具体哪个对象处理该请求由运行时刻自动确定。
+2. 在不明确指定接收者的情况下，向多个对象中的一个提交一个请求。
+3. 可动态指定一组对象处理请求。
 
 ## 参考文章
 [责任链模式](https://www.runoob.com/design-pattern/chain-of-responsibility-pattern.html)
