--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -4,17 +4,17 @@
 
 ### 1. 读书
 
-1. 《代码整洁之道》
-2. 《程序员修炼之道》
-3. 《深入理解 Android 卷一》
-4. 《图解 HTTP 》
-5. 《 Android 开发艺术探索》
-6. 《 Android 进阶之光》
-7. 《 Android 进阶解密》
-8. 《 Android 源码设计模式解析与实战》
-9. 《深入探索 Android 热修复技术原理》
-10. 《 Android 插件化开发指南》
-11. 《 深入理解 Java 虚拟机》 
+1. 《 代码整洁之道 》
+2. 《 程序员修炼之道 》
+3. 《 深入理解 Android 卷一 》
+4. 《 图解 HTTP 》
+5. 《 Android 开发艺术探索 》
+6. 《 Android 进阶之光 》
+7. 《 Android 进阶解密 》
+8. 《 Android 源码设计模式解析与实战 》
+9. 《深入探索 Android 热修复技术原理 》
+10. 《 Android 插件化开发指南 》
+11. 《 深入理解 Java 虚拟机 》 
 
 ### 2. 学习
 
@@ -41,8 +41,9 @@
 
 ### 书籍阅读
 
-1. 《好的婚姻，要守护财产和爱》2020年1月
-2. 《深入理解 Java 虚拟机》 2020 年 3 月
+1. 《 好的婚姻，要守护财产和爱 》2020年1月
+2. 《 深入理解 Java 虚拟机 》 2020 年 3 月
+3.  
 
 ### 影视
 
@@ -59,14 +60,14 @@
 
 ### 2020 年 1 月
 
-1. 《好的婚姻，要守护财产和爱》
-2. 《深入理解 Java 虚拟机》 第2 - 3 章
-4. 《设计模式之禅》第 4-6  章
+1. 《 好的婚姻，要守护财产和爱 》
+2. 《 深入理解 Java 虚拟机 》 第2 - 3 章
+4. 《 设计模式之禅 》第 4-6  章
 4. 整理性能优化文章
 
 ### 2020 年 2 月
 
-1. 《深入理解 Java 虚拟机》 第 4 - 9 章
+1. 《 深入理解 Java 虚拟机 》 第 4 - 9 章
 3. 学习 RabbitMQ 知识
 3. 锻炼 6 天
 
@@ -74,16 +75,18 @@
 
 1. implementation 与 api 的区别
 2. jar 与 aar 的区别
-3. 《深入理解 Java 虚拟机》第 10-13  、2-3章 本书完结
+3. 《 深入理解 Java 虚拟机 》第 10-13  、2-3章 本书完结
 4. RabbitMQ 知识整理
 5. Android 中 Home 键的监听
 6. Fragment 知识总结
-7. 《年纪轻轻，就有了猫》54%
+7. 《 年纪轻轻，就有了猫 》88%
 8. 绘画 2 幅
 9. 锻炼 10 天
 10. 同步知识
 11. volatile 知识
 12. synchronized 知识
+13. 责任链模式
+14. 《 图解 HTTP 》第 1 章
 
 
 
@@ -125,8 +128,8 @@
    * RabbitMQ - 已完成
 3. 网络
    * 计算机网络知识基础
-   * HTTPS
-   * TCP与UDP
+   * HTTPS - 应用层协议
+   * TCP与UDP - 传输层协议
    * Socket
 4. Java
    * 线程
@@ -148,5 +151,5 @@
    * 查找算法
 6. 其他
    * Gradle
-   * 责任链模式
+   * 责任链模式 - 完成
 
