--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -14,7 +14,7 @@
 8. 《 Android 源码设计模式解析与实战 》
 9. 《深入探索 Android 热修复技术原理 》
 10. 《 Android 插件化开发指南 》
-11. 《 深入理解 Java 虚拟机 》 
+11. 《 深入理解 Java 虚拟机 》  - 已完成
 
 ### 2. 学习
 
@@ -43,7 +43,7 @@
 
 1. 《 好的婚姻，要守护财产和爱 》2020年1月
 2. 《 深入理解 Java 虚拟机 》 2020 年 3 月
-3.  
+3.  《 年纪轻轻，就有了猫 》2020 年 3 月 
 
 ### 影视
 
@@ -79,14 +79,15 @@
 4. RabbitMQ 知识整理
 5. Android 中 Home 键的监听
 6. Fragment 知识总结
-7. 《 年纪轻轻，就有了猫 》88%
+7. 《 年纪轻轻，就有了猫 》
 8. 绘画 2 幅
-9. 锻炼 10 天
+9. 锻炼 12 天
 10. 同步知识
 11. volatile 知识
 12. synchronized 知识
 13. 责任链模式
 14. 《 图解 HTTP 》第 1 章
+15. OkHttp
 
 
 
@@ -112,7 +113,6 @@
    * Fragment - 已完成
 2. 开源库
    * Glide
-   * OkHttp
    * Retrofit 源码分析
    * RxJava
    * RxAndroid
@@ -125,6 +125,7 @@
    * 热修复
    * Flutter 与 RN
    * Okio
+   * OkHttp - 已完成
    * RabbitMQ - 已完成
 3. 网络
    * 计算机网络知识基础
