1.retrofit知识积累,2.适配文章

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -12,7 +12,7 @@
 6. 《 Android 进阶之光 》
 7. 《 Android 进阶解密 》
 8. 《 Android 源码设计模式解析与实战 》
-9. 《深入探索 Android 热修复技术原理 》
+9. 《 深入探索 Android 热修复技术原理 》
 10. 《 Android 插件化开发指南 》
 11. 《 深入理解 Java 虚拟机 》  - 已完成
 
@@ -88,6 +88,7 @@
 13. 责任链模式
 14. 《 图解 HTTP 》第 1 章
 15. OkHttp
+16. Android 4.4.4 分包后找不到类的问题
 
 
 
@@ -109,7 +110,6 @@
    * 屏幕适配
    * 缓存机制
    * 多线程通信
-   * SurfaceView 
    * Fragment - 已完成
 2. 开源库
    * Glide
@@ -123,8 +123,6 @@
    * eventBus
    * 插件化
    * 热修复
-   * Flutter 与 RN
-   * Okio
    * OkHttp - 已完成
    * RabbitMQ - 已完成
 3. 网络
@@ -142,6 +140,7 @@
    * String
    * ReentrantLock
    * Condition
+   * 动态代理类 Proxy
    * volatile - 数据从主内存直接获取 - 已完成
    * synchronized - 同步 - 已完成
 5. 数据结构
@@ -154,3 +153,11 @@
    * Gradle
    * 责任链模式 - 完成
 
+## 后续
+
+1. Android Dex 分包 https://www.jianshu.com/p/e96f345e822f
+2. Okio
+3. Flutter 与 RN
+4. SurfaceView 
+5. 《 TCP / IP 详解卷一 》
+6. 《 HTTP 权威指南 》
