--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -81,7 +81,7 @@
 6. Fragment 知识总结
 7. 《 年纪轻轻，就有了猫 》
 8. 绘画 2 幅
-9. 锻炼 12 天
+9. 锻炼 13 天
 10. 同步知识
 11. volatile 知识
 12. synchronized 知识
@@ -161,3 +161,4 @@
 4. SurfaceView 
 5. 《 TCP / IP 详解卷一 》
 6. 《 HTTP 权威指南 》
+7. Java method 类
