--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -80,8 +80,8 @@
 5. Android 中 Home 键的监听
 6. Fragment 知识总结
 7. 《 年纪轻轻，就有了猫 》
-8. 绘画 2 幅
-9. 锻炼 13 天
+8. 绘画 4 幅
+9. 锻炼 14 天
 10. 同步知识
 11. volatile 知识
 12. synchronized 知识
@@ -89,6 +89,8 @@
 14. 《 图解 HTTP 》第 1 章
 15. OkHttp
 16. Android 4.4.4 分包后找不到类的问题
+17. Retrofit
+18. 《 Android 开发艺术探索 》第 1 章
 
 
 
@@ -96,10 +98,10 @@
 
 1. Android
    * ContentProvider
-   * Handle、Message、Looper
+   * Handle、Message、Looper - 3月
    * Binder
    * Intent
-   * 进程保活
+   * 进程保活- 守护进程 - 3月
    * 优化
    * AsyncTask
    * 事件分发机制
@@ -110,20 +112,20 @@
    * 屏幕适配
    * 缓存机制
    * 多线程通信
-   * Fragment - 已完成
+   * Fragment - 已完成 3月
 2. 开源库
    * Glide
-   * Retrofit 源码分析
    * RxJava
-   * RxAndroid
-   * XWalkView
    * LRUCache
    * Picasso
    * WebSocket
    * eventBus
+   * RxAndroid
+   * XWalkView
    * 插件化
    * 热修复
-   * OkHttp - 已完成
+   * Retrofit 源码分析 - 已完成 3 月
+   * OkHttp - 已完成 3月
    * RabbitMQ - 已完成
 3. 网络
    * 计算机网络知识基础
@@ -141,8 +143,8 @@
    * ReentrantLock
    * Condition
    * 动态代理类 Proxy
-   * volatile - 数据从主内存直接获取 - 已完成
-   * synchronized - 同步 - 已完成
+   * volatile - 数据从主内存直接获取 - 已完成 3月
+   * synchronized - 同步 - 已完成 3月
 5. 数据结构
    * 链表与队列
    * 树
@@ -151,7 +153,7 @@
    * 查找算法
 6. 其他
    * Gradle
-   * 责任链模式 - 完成
+   * 责任链模式 - 完成 3月
 
 ## 后续
 
